Convert from big5 to utf-8 as GitHub Pages enforces charset=utf-8

--- a/ecpa2007/2007-concert-pics.html
+++ b/ecpa2007/2007-concert-pics.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 
 </head>
@@ -122,7 +122,7 @@
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="580" height="24">&nbsp;
   <font color="#FFFF00"><span lang="ZH-TW" style="font-family: PMingLiU">
-·R«°¥Á¼Ö¹Î¦¨¥ß¤»©P¦~ºt«µ·|</span><span style="font-family: PMingLiU">&nbsp; <br>
+æ„›åŸæ°‘æ¨‚åœ˜æˆç«‹å…­å‘¨å¹´æ¼”å¥æœƒ</span><span style="font-family: PMingLiU">&nbsp; <br>
 	</span><span lang="ZH-TW" style="font-family: PMingLiU"><br>
 	</span><b><font size="2">2007 Edmonton Chinese Philharmonica 6th Anniversary Concert 
 </font></b> </font>
@@ -131,7 +131,7 @@
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
 <a href="2007-concert-pics2.html"><font color="#000000">View more pictures of 
@@ -187,12 +187,12 @@ the concert </font></a>
 <p><img border="0" src="../2007pics/z%20DSC_1989.jpg" width="566" height="380"></p>
 <p><a href="2007-concert-pics2.html"><font color="#000000">View more pictures of 
 the concert </font></a></p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</td>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</td>
 
 </tr>
 
@@ -200,7 +200,7 @@ the concert </font></a></p>
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -212,8 +212,8 @@ the concert </font></a></p>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
