--- a/ecpa2007/2007-ma-lan.html
+++ b/ecpa2007/2007-ma-lan.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 
 </head>
@@ -122,7 +122,7 @@
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="580" height="24">&nbsp;
   <font color="#FFFF00"><span lang="ZH-TW" style="font-family: PMingLiU">
-·R«°¥Á¼Ö¹Î°¨Äõ±¡ºqÁp¦Xºt«µ·|</span><span style="font-family: PMingLiU">&nbsp; <br>
+æ„›åŸæ°‘æ¨‚åœ˜é¦¬è˜­æƒ…æ­Œè¯åˆæ¼”å¥æœƒ</span><span style="font-family: PMingLiU">&nbsp; <br>
 	</span><span lang="ZH-TW" style="font-family: PMingLiU"><br>
 	</span><b><font size="2">2007 Edmonton Chinese Philharmonica Joint 
 	Performance Ma-Lan Seranade Concert 
@@ -132,7 +132,7 @@
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
 <img border="0" src="../2007pics/picture1.jpg" width="566" height="428"><p>
@@ -151,7 +151,7 @@
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -163,8 +163,8 @@
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
