--- a/ecpa2007/2007-variety.html
+++ b/ecpa2007/2007-variety.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 
 </head>
@@ -121,7 +121,7 @@
 	<tr>
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="411" height="24">&nbsp;
-  <font color="#FFFF00">¤åÃÀ¤j¶×ºt <span style="font-family: PMingLiU">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <font color="#FFFF00">æ–‡è—å¤§åŒ¯æ¼” <span style="font-family: PMingLiU">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span><b><font size="2">December 15, 2007</font></b><span style="font-family: PMingLiU"><br>
 	</span><span lang="ZH-TW" style="font-family: PMingLiU"><br>
 	</span><b><font size="2">2007 Edmonton Culture and Arts Variety Show&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
@@ -131,7 +131,7 @@
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="411" height="63" bordercolor="#FFFFFF">
 <img border="0" src="images/performing%20poster%20400.jpg" width="400" height="543"></td>
@@ -142,7 +142,7 @@
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="411" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -154,8 +154,8 @@
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
