--- a/ecpa2008/2008-concert.html
+++ b/ecpa2008/2008-concert.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <html>
 <body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 <table border="0" width="715">
@@ -101,27 +101,27 @@
 	<tr>
 	<td bgcolor="#FF0000" width="5" height="112"></td>
   	<td bgcolor="#FF0000" width="580" height="112">
-	<font face="Trebuchet MS" color="#FFFF00">¡§North Meets South¡¨ Concert,</font><font color="#FFFF00" size="2"><b> </b>
+	<font face="Trebuchet MS" color="#FFFF00">â€œNorth Meets Southâ€ Concert,</font><font color="#FFFF00" size="2"><b> </b>
 	</font><font face="Trebuchet MS" color="#FFFF00">&nbsp;October 11, 2008</font><p>
-	<font face="Trebuchet MS" color="#FFFF00">À­«nÀ­¥_µ·¦Ë½t­µ¼Ö·|</font><p>
+	<font face="Trebuchet MS" color="#FFFF00">å¶ºå—å¶ºåŒ—çµ²ç«¹ç·£éŸ³æ¨‚æœƒ</font><p>
 	<font face="Trebuchet MS" color="#FFFF00">Concert successfully 
 	completed. <a target="_blank" href="2008-north-meet-south.html">
-	<font color="#FFFF00">Please view pictures here.</font></a></font><span lang="ZH-TW" style="font-size: 12.0pt; font-family: ¤å¹©¤¤·¢"><b><br>
-	</b></span><font face="Trebuchet MS" color="#FFFF00">À­«nÀ­¥_µ·¦Ë½t­µ¼Ö·|¤w&#22278;&#28385;µ²§ô¡A<a target="_blank" href="2008-north-meet-south.html"><font color="#FFFF00">ÂI¦¹Æ[¬İ·Ó¤ù</font></a></font><p>
+	<font color="#FFFF00">Please view pictures here.</font></a></font><span lang="ZH-TW" style="font-size: 12.0pt; font-family: æ–‡é¼ä¸­æ¥·"><b><br>
+	</b></span><font face="Trebuchet MS" color="#FFFF00">å¶ºå—å¶ºåŒ—çµ²ç«¹ç·£éŸ³æ¨‚æœƒå·²&#22278;&#28385;çµæŸï¼Œ<a target="_blank" href="2008-north-meet-south.html"><font color="#FFFF00">é»æ­¤è§€çœ‹ç…§ç‰‡</font></a></font><p>
 	<font face="Trebuchet MS" color="#FFFF00">View concert program online,
 	<a target="_blank" href="2008%20online%20program.pdf"><font color="#FFFF00">
 	click here</font></a></font><br>
-¡@</td>
+ã€€</td>
 
 </tr>
 
 <tr>
-<td width="5" height="354" align="center" bgcolor="white" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="354" align="center" bgcolor="white" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="354" bordercolor="#FFFFFF" valign="top">
-<p style="margin:0cm;margin-bottom:.0001pt"><span style="font-family: ¤å¹©¤¤·¢">
+<p style="margin:0cm;margin-bottom:.0001pt"><span style="font-family: æ–‡é¼ä¸­æ¥·">
 <font color="#0000FF">The ECP is holding the Seventh anniversary concert on Saturday, October 11, 
-2008, at the Edmonton Winspear theatre entitled ¡§North Meets South¡¨. The concert 
+2008, at the Edmonton Winspear theatre entitled â€œNorth Meets Southâ€. The concert 
 will be given by the Edmonton Chinese Philharmonica, joined by invited guest 
 performer Gaohu Master Chen Guo Chan, Macie Ho and Calla Tan from Toronto. 
 Master Chen Guo Chan shall be performing several memorable Gaohu solo pieces. 
@@ -129,9 +129,9 @@ This concert is destined to be an exciting cultural exchange between music
 groups from Hong Kong and Edmonton. The concert will certainly be very 
 interesting and enjoyable.</font><br>
 <br>
-<font color="#0000FF">¬°¼y¯¬·R«°¥Á¼Ö¹Î¦¨¥ß¤C©P¦~¡A¥»¼Ö¹Î±N·|¦b¤µ¦~¤G¹s¹s¤K¦~¤Q¤ë¤Q¤@¤é¬P´Á¤»±ß¤W¡A°²®y¨È¬Ù·R«°­µ¼ÖÆU¡AÁ|¦æ¡yÀ­«nÀ­¥_µ·¦Ë½t¡z­µ¼Ö·|¡F¬O¦¸­µ¼Ö·|¡A§Ú­Ì«Üºa©¯ÁÜ½Ğ¨ì¤F¦h­Û¦h°ª­J¤j®v³¯°ê²£¥ı¥Í¡Bµ\µ]ºt«µ®a¦ó¾å±ö©M´­µ^ºt«µ®aÃÓ¿o¦p¨Ó·R«°»P§Ú­Ì¤@°_ºt¥X¡F³¯°ê²£¥ı¥Í·í±ß±N·|ºt¥X¦h­º°ª­J¿W«µ¦W¦±.</font><br>
-<img border="0" src="concert/chenguochan_profile_pic.jpg" width="379" height="419">¬ü</span></p>
-<p><font color="#0000FF">°ª­J¤j®v³¯°ê²£¥ı¥Í</font></p></td>
+<font color="#0000FF">ç‚ºæ…¶ç¥æ„›åŸæ°‘æ¨‚åœ˜æˆç«‹ä¸ƒå‘¨å¹´ï¼Œæœ¬æ¨‚åœ˜å°‡æœƒåœ¨ä»Šå¹´äºŒé›¶é›¶å…«å¹´åæœˆåä¸€æ—¥æ˜ŸæœŸå…­æ™šä¸Šï¼Œå‡åº§äºçœæ„›åŸéŸ³æ¨‚å»³ï¼Œèˆ‰è¡Œã€å¶ºå—å¶ºåŒ—çµ²ç«¹ç·£ã€éŸ³æ¨‚æœƒï¼›æ˜¯æ¬¡éŸ³æ¨‚æœƒï¼Œæˆ‘å€‘å¾ˆæ¦®å¹¸é‚€è«‹åˆ°äº†å¤šå€«å¤šé«˜èƒ¡å¤§å¸«é™³åœ‹ç”¢å…ˆç”Ÿã€çµç¶æ¼”å¥å®¶ä½•æ›‰æ¢…å’Œæšç´æ¼”å¥å®¶è­šç©å¦‚ä¾†æ„›åŸèˆ‡æˆ‘å€‘ä¸€èµ·æ¼”å‡ºï¼›é™³åœ‹ç”¢å…ˆç”Ÿç•¶æ™šå°‡æœƒæ¼”å‡ºå¤šé¦–é«˜èƒ¡ç¨å¥åæ›².</font><br>
+<img border="0" src="concert/chenguochan_profile_pic.jpg" width="379" height="419">ç¾</span></p>
+<p><font color="#0000FF">é«˜èƒ¡å¤§å¸«é™³åœ‹ç”¢å…ˆç”Ÿ</font></p></td>
 
 </tr>
 
@@ -143,8 +143,8 @@ interesting and enjoyable.</font><br>
 <font face="Trebuchet MS">Concert was successfully completed. </font>
 <font face="Trebuchet MS" color="#FFFF00">
 <a target="_blank" href="2008-north-meet-south.html"><font color="#000000">
-Please view pictures here.</font></a></font><b><span lang="ZH-TW" style="font-size: 12.0pt; font-family: ¤å¹©¤¤·¢"><br>
-À­«nÀ­¥_µ·¦Ë½t­µ¼Ö·|</span>¤w&#22278;&#28385;µ²§ô¡A<a target="_blank" href="2008-north-meet-south.html">ÂI¦¹Æ[¬İ·Ó¤ù</a></b></td>
+Please view pictures here.</font></a></font><b><span lang="ZH-TW" style="font-size: 12.0pt; font-family: æ–‡é¼ä¸­æ¥·"><br>
+å¶ºå—å¶ºåŒ—çµ²ç«¹ç·£éŸ³æ¨‚æœƒ</span>å·²&#22278;&#28385;çµæŸï¼Œ<a target="_blank" href="2008-north-meet-south.html">é»æ­¤è§€çœ‹ç…§ç‰‡</a></b></td>
 
 </tr>
 
@@ -155,8 +155,8 @@ Please view pictures here.</font></a></font><b><span lang="ZH-TW" style="font-si
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
