--- a/ecpa2008/2008-hk-trip.html
+++ b/ecpa2008/2008-hk-trip.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -130,33 +130,33 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('card_left_new.gif');
   	<td bgcolor="#FF0000" width="580" height="24">
 	<font face="Trebuchet MS" color="#FFFF00">ECP members participated in the HK 
 	International Chinese music convention, September, 2008. <br>
-	·R«°¥Á¼Ö¹Î©ó¤G¹s¹s¤K¦~¤E¤ë¬£¥X¹Î­û°Ñ»P­»´ä°ê»Ú¤¤¼Ö¸`<br>
-¡@</font></td>
+	æ„›åŸæ°‘æ¨‚åœ˜æ–¼äºŒé›¶é›¶å…«å¹´ä¹æœˆæ´¾å‡ºåœ˜å“¡åƒèˆ‡é¦™æ¸¯åœ‹éš›ä¸­æ¨‚ç¯€<br>
+ã€€</font></td>
 
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
 <p><img border="0" src="hk-trip/DSCN0905b.jpg" width="516" height="404"></p>
 <p>(Above) Representatives from Edmonton to the HK International Chinese music 
 convention:<br>
 Christopher Leung, Jenny Tin, Jason Wong, Jessica Leung <br>
-±ç»F®x, Â²¤ë¬K, ¶ÀÄ£®x, ±ç¥ç§Í</p>
+æ¢è‚‡åº­, ç°¡æœˆæ˜¥, é»ƒè€€åº­, æ¢äº¦å½¤</p>
 <p><img border="0" src="hk-trip/DSCN0905.jpg" width="516" height="390"><img border="0" src="hk-trip/DSCN0908.jpg" width="516" height="364"><img border="0" src="hk-trip/DSCN0934.jpg" width="516" height="400"><br>
 (Above) Edmonton ECPA Music Director Jason Wong with
-<font face="Trebuchet MS" color="#000080">­»´ä¤¤¼Ö¨ó·|²z¨ÆM</font>aster
-<font face="Trebuchet MS" color="#000080">´ö¨}¼w<br>
+<font face="Trebuchet MS" color="#000080">é¦™æ¸¯ä¸­æ¨‚å”æœƒç†äº‹M</font>aster
+<font face="Trebuchet MS" color="#000080">æ¹¯è‰¯å¾·<br>
 <br>
 </font><img border="0" src="hk-trip/DSCN0945.jpg" width="516" height="343"><img border="0" src="hk-trip/DSCN0932.jpg" width="516" height="396"><img border="0" src="hk-trip/DSCN0914.jpg" width="516" height="351"><img border="0" src="hk-trip/DSCN0922.jpg" width="516" height="391"><img border="0" src="hk-trip/DSCN0900.jpg" width="516" height="386"></p>
 <p>(End of pictures)</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</td>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</td>
 
 </tr>
 
@@ -164,9 +164,9 @@ Christopher Leung, Jenny Tin, Jason Wong, Jessica Leung <br>
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -178,8 +178,8 @@ Christopher Leung, Jenny Tin, Jason Wong, Jessica Leung <br>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -217,7 +217,7 @@ ecpa2001@hotmail.com</a></font>
 			</tr>
 		</table>
 	<p><br>
-¡@</p>
+ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
