--- a/ecpa2008/2008-hkifco2008-posters.html
+++ b/ecpa2008/2008-hkifco2008-posters.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <html>
 <body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 <table border="0" width="715">
@@ -28,18 +28,18 @@
 
  
 </table>
-<p style="margin:0cm;margin-bottom:.0001pt">¡@</p>
+<p style="margin:0cm;margin-bottom:.0001pt">ã€€</p>
 <p style="margin:0cm;margin-bottom:.0001pt"><font size="4">ECP are sending 
 members to participate in this international Chinese music convention in 
 September, 2008. </font></p>
 <p style="margin:0cm;margin-bottom:.0001pt"><font size="4"><br>
-·R«°¥Á¼Ö¹Î±N·|©ó¤G¹s¹s¤K¦~¤E¤ë¬£¥X¹Î­û°Ñ»P³o°ê»Ú©Êªº¤¤¼Ö²±·|:</font></p>
-<p style="margin:0cm;margin-bottom:.0001pt">¡@</p>
+æ„›åŸæ°‘æ¨‚åœ˜å°‡æœƒæ–¼äºŒé›¶é›¶å…«å¹´ä¹æœˆæ´¾å‡ºåœ˜å“¡åƒèˆ‡é€™åœ‹éš›æ€§çš„ä¸­æ¨‚ç››æœƒ:</font></p>
+<p style="margin:0cm;margin-bottom:.0001pt">ã€€</p>
 <p style="margin:0cm;margin-bottom:.0001pt"><font size="4">&nbsp;Event 
 successfully completed. <a target="_blank" href="2008-hk-trip.html">Please view 
 pictures here</a><br>
-­»´ä°ê»Ú¤¤¼Ö¸`¤w&#22278;&#28385;µ²§ô¡A<a target="_blank" href="2008-hk-trip.html">ÂI¦¹Æ[¬İ·Ó¤ù</a><br>
-¡@</font></p>
+é¦™æ¸¯åœ‹éš›ä¸­æ¨‚ç¯€å·²&#22278;&#28385;çµæŸï¼Œ<a target="_blank" href="2008-hk-trip.html">é»æ­¤è§€çœ‹ç…§ç‰‡</a><br>
+ã€€</font></p>
 <p>
 <img border="0" src="images/HKIFCO2008-poster_Page_1.jpg" width="816" height="1057"></p>
 <p>
@@ -48,7 +48,7 @@ pictures here</a><br>
 <img border="0" src="images/HKIFCO2008-poster_Page_3.jpg" width="816" height="1057"></p>
 <p>
 <img border="0" src="images/HKIFCO2008-poster_Page_4.jpg" width="816" height="1057"></p>
-<p>¡@</p>
+<p>ã€€</p>
 
  
 </body>
