--- a/ecpa2008/2008-nait.html
+++ b/ecpa2008/2008-nait.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -130,12 +130,12 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('card_left_new.gif');
   	<td bgcolor="#FF0000" width="580" height="24">
 	<font face="Trebuchet MS" color="#FFFF00">NAIT Chinese New Year Celebration</font><b><font color="#FFFF00" size="2">,
 	</font></b><font face="Trebuchet MS" color="#FFFF00">&nbsp;Feb 1st, 2008<br>
-	¡@</font></td>
+	ã€€</font></td>
 
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
 <img border="0" src="images/DSC_0044.jpg" width="516" height="350"><img border="0" src="images/DSC_0045.jpg" width="516" height="350"><img border="0" src="images/DSC_0047.jpg" width="516" height="349"><img border="0" src="images/DSC_0054.jpg" width="516" height="349"><img border="0" src="images/DSC_0067.jpg" width="516" height="349"><img border="0" src="images/DSC_0073.jpg" width="516" height="349"></td>
@@ -158,8 +158,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('card_left_new.gif');
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
