--- a/ecpa2009/2009-Harriet-Sung.html
+++ b/ecpa2009/2009-Harriet-Sung.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -128,8 +128,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<tr>
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="616" height="24">
-	<font face="Trebuchet MS" color="#FFFF00">¹Ú ²o ª÷ ¦±&nbsp;&nbsp;&nbsp; ·O µ½ ºt °Û 
-	·|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ¤G¹s¹s¤E¦~¤T¤ë¤Ü¤K¤é<br>
+	<font face="Trebuchet MS" color="#FFFF00">å¤¢ ç‰½ é‡‘ æ›²&nbsp;&nbsp;&nbsp; æ…ˆ å–„ æ¼” å”± 
+	æœƒ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; äºŒé›¶é›¶ä¹å¹´ä¸‰æœˆå»¿å…«æ—¥<br>
 	Songs from a Dream in support of Canadian Cancer Society<br>
 	Harriet Sung's Concert<br>
 	Muttart Hall, Grant MacEwan College, Edmonton, Alberta, Canada<br>
@@ -138,7 +138,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
 <p><img border="0" src="Harriet%20Sung%203.jpg" width="616" height="417"></p>
@@ -168,8 +168,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
