--- a/ecpa2009/2009-xiang-photos.html
+++ b/ecpa2009/2009-xiang-photos.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -127,10 +127,10 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
       <table WIDTH="635" BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="36">
-	<font color="#FFFF00">2009-10-25 ¡uºŞ²Íºå½÷Ä£·R«°¡v­µ¼Ö·|¶êº¡µ²§ô Æ[¬İ·Ó¤ù</font><p>
+	<font color="#FFFF00">2009-10-25 ã€Œç®¡çµƒç®è¼è€€æ„›åŸã€éŸ³æ¨‚æœƒåœ“æ»¿çµæŸ è§€çœ‹ç…§ç‰‡</font><p>
 	<font color="#FFFF00">Pictures and video of the performance:</font></p></td>
   	<td bgcolor="#FF0000" width="4" height="136">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -162,9 +162,9 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 <a target="_blank" href="http://picasaweb.google.com/ECPA2009a/HongSeeWahDinner?authkey=Gv1sRgCIfI9_Sp2fmEmgE">
 <font color="#FF0000">Hong See Wah dinner</font></a><br>
 <a target="_blank" href="http://www.youtube.com/watch?v=KZjL2stHR2M">
-<font color="#FF0000">ECPA Rehearsal ªF®üº®ºq Part 1</font></a><br>
+<font color="#FF0000">ECPA Rehearsal æ±æµ·æ¼æ­Œ Part 1</font></a><br>
 <a target="_blank" href="http://www.youtube.com/watch?v=qDItmMx6adc">
-<font color="#FF0000">ECPA Rehearsal ªF®üº®ºq Part 2</font></a></font><p>
+<font color="#FF0000">ECPA Rehearsal æ±æµ·æ¼æ­Œ Part 2</font></a></font><p>
 <img border="0" src="2009-concert/DSC_2462.jpg" width="616" height="193"><img border="0" src="2009-concert/DSCF3256.jpg" width="616" height="418"><img border="0" src="2009-concert/DSC_2453.jpg" width="616" height="415"><img border="0" src="2009-concert/DSCF3260.jpg" width="616" height="417"><img border="0" src="2009-concert/DSCF3265.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3298.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3392.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3582.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3584.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3390.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3588.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3589.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3596.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3597.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3598.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3600.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF3398.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2828.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2369.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2371.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2394.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2398.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2402.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2400.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2404.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2473.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2525.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2644.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2658.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2748.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2784.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2853.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2880.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2919.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2922.jpg" width="616" height="418"><img border="0" src="2009-concert/DSCF2979.jpg" width="616" height="418"></p></td>
 
 </tr>
@@ -176,8 +176,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -206,7 +206,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
