--- a/ecpa2010/2010-festival-pic.html
+++ b/ecpa2010/2010-festival-pic.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 </head>
 
@@ -99,13 +99,13 @@
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><img border="0" src="logo.jpg" width="307" height="100"></p>
-	<p align="center"><b><font color="#FFFF00">2010 ¥[®³¤j·R¥Á¹y¤¤¼Ö¸` ¡u¬ü¼Ö¥æ¿Ä»E·R«°¡v ¤­¤ë¤G¤Q¤@¦Ü¤G¤Q¤»¤é<font size="5"><br>
-	</font><font size="4">2010 Chinese Music Festival, Edmonton, Canada ¡V May 21 
+	<p align="center"><b><font color="#FFFF00">2010 åŠ æ‹¿å¤§æ„›æ°‘é “ä¸­æ¨‚ç¯€ ã€Œç¾æ¨‚äº¤èèšæ„›åŸã€ äº”æœˆäºŒåä¸€è‡³äºŒåå…­æ—¥<font size="5"><br>
+	</font><font size="4">2010 Chinese Music Festival, Edmonton, Canada â€“ May 21 
 	to May 26&nbsp;</font></font><font size="5"> </font>
 	</b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -114,7 +114,7 @@
 
 <td bgcolor="#FFFFFF"  align="left" width="620" bordercolor="#FFFFFF">
 <p><font color="#000080"><br>
-<b>2010 Chinese Music Festival, Edmonton, Canada ¡V May 21 to May 26<span style="font-family: §ºÊ^"><br>
+<b>2010 Chinese Music Festival, Edmonton, Canada â€“ May 21 to May 26<span style="font-family: å®‹ä½“"><br>
 &nbsp;&quot;</span>Bonne&nbsp; Musique&quot;&nbsp; in Edmonton</b>&nbsp;</font></p>
 <p><a target="_blank" href="http://www.youtube.com/ecpa2010#g/u">
 <img border="0" src="Pics/youtube%20small%20200.jpg" width="200" height="37"></a><font color="#000080" size="2"><b>Click</b></font>
@@ -191,7 +191,7 @@ performance video on Youtube</b></font></p>
 <p><img border="0" src="Pics/school%208.jpg" width="566" height="382"></p>
 <p><img border="0" src="Pics/school%209.jpg" width="566" height="382"></p>
 <p><img border="0" src="Pics/school%2010.jpg" width="566" height="382"></p>
-<p>¡@</p>
+<p>ã€€</p>
 <p><a href="2010-festival.html">Back to 2010 Festival main page</a></p></td>
 
 </tr>
@@ -203,8 +203,8 @@ performance video on Youtube</b></font></p>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -233,7 +233,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
