--- a/ecpa2010/2010-festival.html
+++ b/ecpa2010/2010-festival.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../CSS/s1.css" type="text/css" media="screen" />
 
 <style>
@@ -107,13 +107,13 @@ a:active     { color: #008000 }
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><img border="0" src="logo.jpg" width="307" height="100"></p>
-	<p align="center"><b><font color="#FFFF00">2010 ¥[®³¤j·R¥Á¹y¤¤¼Ö¸` ¡u¬ü¼Ö¥æ¿Ä»E·R«°¡v ¤­¤ë¤G¤Q¤@¦Ü¤G¤Q¤»¤é<font size="5"><br>
-	</font><font size="4">2010 Chinese Music Festival, Edmonton, Canada ¡V May 21 
+	<p align="center"><b><font color="#FFFF00">2010 åŠ æ‹¿å¤§æ„›æ°‘é “ä¸­æ¨‚ç¯€ ã€Œç¾æ¨‚äº¤èèšæ„›åŸã€ äº”æœˆäºŒåä¸€è‡³äºŒåå…­æ—¥<font size="5"><br>
+	</font><font size="4">2010 Chinese Music Festival, Edmonton, Canada â€“ May 21 
 	to May 26&nbsp;</font></font><font size="5"> </font>
 	</b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -130,63 +130,63 @@ the festival</a></font></p>
 <font color="#000080">Download Winspear concert program (right mouse click and 
 choose &quot;save target as&quot;):</font><font color="#0000FF"> </font>
 <a target="_blank" title="Rright mouse click and choose &quot;save target as&quot; to download Winspear Concert Program" href="../2010_ecpa_online_program.pdf">Download Winspear concert program</a></p>
-<p><font color="#000080">¡u¬ü¼Ö¥æ¿Ä»E·R«°¡v­µ¼Ö·| °²®y¨È¬Ù·R«°Winspear­µ¼ÖÆU ¤­¤ë¤G¤Q¤T¤é±ß¤W¤C®É¥b</font></p>
-<p><font color="#000080">¡u¬ü¼ÖÄÆÄÆ¦b¦è¼¯¡v°Ó³õ¤È¶¡­µ¼Ö·| ¤­¤ë¤G¤Q¥|¤é¤U¤È<br>
+<p><font color="#000080">ã€Œç¾æ¨‚äº¤èèšæ„›åŸã€éŸ³æ¨‚æœƒ å‡åº§äºçœæ„›åŸWinspearéŸ³æ¨‚å»³ äº”æœˆäºŒåä¸‰æ—¥æ™šä¸Šä¸ƒæ™‚åŠ</font></p>
+<p><font color="#000080">ã€Œç¾æ¨‚é£„é£„åœ¨è¥¿æ‘©ã€å•†å ´åˆé–“éŸ³æ¨‚æœƒ äº”æœˆäºŒåå››æ—¥ä¸‹åˆ<br>
 <br>
-¡u¬ü¼Ö¼½¸U¤d¡v¾Ç®Õ¤é¶¡­µ¼Ö·| ¤­¤ë¤G¤Q¤@¡B¤G¤Q¤­¤é</font></p>
+ã€Œç¾æ¨‚æ’­è¬åƒã€å­¸æ ¡æ—¥é–“éŸ³æ¨‚æœƒ äº”æœˆäºŒåä¸€ã€äºŒåäº”æ—¥</font></p>
 <p><font color="#000080">Here are the activity components:</font></p>
-<p><font color="#000080">May 23, 2010 (7:00pm Sunday) ¡¥Bonne Musique¡¦ Concert Edmonton Winspear Centre<br>
+<p><font color="#000080">May 23, 2010 (7:00pm Sunday) â€˜Bonne Musiqueâ€™ Concert Edmonton Winspear Centre<br>
 <br>
-May 24, 2010 (Monday Afternoon) ¡¥Bonne Musique¡¦ Matinee at West Edmonton Mall 
+May 24, 2010 (Monday Afternoon) â€˜Bonne Musiqueâ€™ Matinee at West Edmonton Mall 
 Phase One Stage<br>
 <br>
-May 21 &amp; 25, 2010 (Friday &amp; Tuesday) ¡¥Bonne Musique¡¦ Matinee at Edmonton 
+May 21 &amp; 25, 2010 (Friday &amp; Tuesday) â€˜Bonne Musiqueâ€™ Matinee at Edmonton 
 Elementary Schools</font></p><hr>
 <p><font color="#000080">Participating Orchestra:</font></p>
 <p><font color="#000080"><a target="_blank" href="2010-orch.html">
 <font color="#000000">Click here for descriptions of the Orchestra&nbsp;&nbsp; 
-¼Ö¹Î¤¶²Ğ</font></a></font></p>
+æ¨‚åœ˜ä»‹ç´¹</font></a></font></p>
 <p><font color="#000080">Hong Kong New Territories Women and Juvenile Welfare Association Leung Sing Tak 
 Primary School Chinese Orchestra<br>
-­»´ä·s¬É°üÀ©ºÖ§Q·|±ç¬Ù¼w¾Ç®Õ¤¤¼Ö¹Î <br>
+é¦™æ¸¯æ–°ç•Œå©¦å­ºç¦åˆ©æœƒæ¢çœå¾·å­¸æ ¡ä¸­æ¨‚åœ˜ <br>
 <br>
 Little Giant Chinese Chamber Orchestra from Taiwan <br>
-¥x&#28286;¤p¥¨¤Hµ·¦Ë¼Ö¹Î <br>
+å°&#28286;å°å·¨äººçµ²ç«¹æ¨‚åœ˜ <br>
 <br>
 Toronto Chinese Orchestra <br>
-¦h­Û¦h¤¤¼Ö¹Î <br>
+å¤šå€«å¤šä¸­æ¨‚åœ˜ <br>
 <br>
 Yellow River Ensemble from Toronto <br>
-¦h­Û¦h&#40644;ªe¼Ö¹Î <br>
+å¤šå€«å¤š&#40644;æ²³æ¨‚åœ˜ <br>
 <br>
 Pentatonics - B.C. Chinese Orchestra <br>
-§È¸Ö¤¤¼Ö¹Îº[ Pentatonics&nbsp; <br>
+åº‡è©©ä¸­æ¨‚åœ˜æš¨ Pentatonics&nbsp; <br>
 <br>
 Edmonton Chinese Philharmonica <br>
-·R«°¥Á¼Ö¹Î</font></p>
+æ„›åŸæ°‘æ¨‚åœ˜</font></p>
 <p><font color="#000080">Media Sponsor:<br>
 </font><img border="0" src="omni_logo.jpg" width="100" height="44"></p><hr>
 <p><font color="#000080">Tickets for the May 23 concert available at:<br>
-¤­¤ë¤G¤Q¤T¤é±ß­µ¼Ö·|°â²¼ÂI: <br>
-Ticket price: $20 ²¼»ù: ¤G¤Q¤¸<br>
+äº”æœˆäºŒåä¸‰æ—¥æ™šéŸ³æ¨‚æœƒå”®ç¥¨é»: <br>
+Ticket price: $20 ç¥¨åƒ¹: äºŒåå…ƒ<br>
 <br>
 Tix On the Square www.tixonthesquare.ca<br>
 780-420-1757<br>
 <br>
-µØ¥Í®ü¨ıÃÄ§÷¦æ (¦è¼¯¤j²ÎµØ¶W¥«¤º)<br>
+è¯ç”Ÿæµ·å‘³è—¥æè¡Œ (è¥¿æ‘©å¤§çµ±è¯è¶…å¸‚å…§)<br>
 Wah Sun Chinese Herbs &amp; Ginseng Center Ltd. (West Edmonton Mall)<br>
 780-443-3742<br>
 <br>
-§Q³q®Ñ§½ Daily Book and Gifts<br>
+åˆ©é€šæ›¸å±€ Daily Book and Gifts<br>
 9700-105 Ave. 780-429-9006<br>
 <br>
-°ê»Ú®È¦æªÀ Citizen Travel Ltd.<br>
+åœ‹éš›æ—…è¡Œç¤¾ Citizen Travel Ltd.<br>
 10653-97 St. 780-429-3388<br>
 <br>
 <br>
-Presented by Edmonton Chinese Philharmonica ·R«°¥Á¼Ö¹Î¥D¿ì</font></p>
+Presented by Edmonton Chinese Philharmonica æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦</font></p>
 <p><img border="0" src="Pics/DSC_5747.jpg" onmouseover="src='Pics/HVR_2916.jpg'" onmouseout="src='Pics/HVR_3535.jpg'" width="566" height="381"><br>
-¡@</p>
+ã€€</p>
 </td>
 
 </tr>
@@ -198,8 +198,8 @@ Presented by Edmonton Chinese Philharmonica ·R«°¥Á¼Ö¹Î¥D¿ì</font></p>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -228,7 +228,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
