--- a/ecpa2010/2010-orch.html
+++ b/ecpa2010/2010-orch.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../CSS/s1.css" type="text/css" media="screen" />
 
 </head>
@@ -105,13 +105,13 @@
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><img border="0" src="logo.jpg" width="307" height="100"></p>
-	<p align="center"><b><font color="#FFFF00">2010 ¥[®³¤j·R¥Á¹y¤¤¼Ö¸` ¡u¬ü¼Ö¥æ¿Ä»E·R«°¡v ¤­¤ë¤G¤Q¤@¦Ü¤G¤Q¤»¤é<font size="5"><br>
-	</font><font size="4">2010 Chinese Music Festival, Edmonton, Canada ¡V May 21 
+	<p align="center"><b><font color="#FFFF00">2010 åŠ æ‹¿å¤§æ„›æ°‘é “ä¸­æ¨‚ç¯€ ã€Œç¾æ¨‚äº¤èèšæ„›åŸã€ äº”æœˆäºŒåä¸€è‡³äºŒåå…­æ—¥<font size="5"><br>
+	</font><font size="4">2010 Chinese Music Festival, Edmonton, Canada â€“ May 21 
 	to May 26&nbsp;</font></font><font size="5"> </font>
 	</b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -120,7 +120,7 @@
 
 <td bgcolor="#FFFFFF"  align="left" width="620" bordercolor="#FFFFFF">
 <p><font color="#000080"><br>
-<b>2010 Chinese Music Festival, Edmonton, Canada ¡V May 21 to May 26<span style="font-family: §ºÊ^"><br>
+<b>2010 Chinese Music Festival, Edmonton, Canada â€“ May 21 to May 26<span style="font-family: å®‹ä½“"><br>
 &nbsp;&quot;</span>Bonne&nbsp; Musique&quot;&nbsp; in Edmonton</b>&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080"><b>Description of the Visiting Orchestra</b>&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080"><b>Hong Kong&nbsp;</b></font></p>
@@ -140,35 +140,35 @@ group and solo performances. In June, 1999, the HK Chief Executive Mr. Tung Chi
 Wah visited Taipo District and enjoyed a performance by the Orchestra and 
 praised its achievements.&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080">In January 2001, the Orchestra participated in the Beijing 
-First Children Orchestra Invitational Competition and obtained the ¡§Star Trophy 
-¡§award. In 2002, the Orchestra performed in Singapore and received great 
+First Children Orchestra Invitational Competition and obtained the â€œStar Trophy 
+â€œaward. In 2002, the Orchestra performed in Singapore and received great 
 accolade. In August 2005, the Leung Sing Tak Chinese Orchestra participated in 
-the Beijing Third youth Orchestra Invitational and obtained the ¡§Sunshine (First 
-Class) ¡§Trophy, organization trophy and Director Trophy.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;</font></p>
+the Beijing Third youth Orchestra Invitational and obtained the â€œSunshine (First 
+Class) â€œTrophy, organization trophy and Director Trophy.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080"><b>Taiwan&nbsp;</b></font></p>
 <p class="MsoNormal"><font color="#000080"><b>2.Little Giant Chinese Chamber Orchestra</b></font></p>
 <p class="MsoNormal"><font color="#000080">The Little Giant Chinese Chamber Orchestra was founded in 
 October 2000 by the Music Director. Chih-Sheng Chen, and a group of young 
 musicians who are both enthusiasts of Chinese art, as well as professionally 
 accomplished players. The instrumentation of the orchestra consists essentially 
-of two groups of instruments-Si Zhu: ¡¥ Si ¡¦, or ¡¦ silk ¡¦ string instruments, and 
-¡¥ Zhu ¡¥, or ¡¥ bamboo ¡¥ wind instruments. The musicians of the orchestra are 
+of two groups of instruments-Si Zhu: â€˜ Si â€™, or â€™ silk â€™ string instruments, and 
+â€˜ Zhu â€˜, or â€˜ bamboo â€˜ wind instruments. The musicians of the orchestra are 
 dedicated to contributing to the spread of Chinese music throughout the world.&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080">In 2002, the orchestra organized a series of concert tours 
-in which 70 musicians took part, including its debut concert ¡¥Peony Pavilion&nbsp; ¡V&nbsp; 
-Xun-Fa Yu¡¦s Dizi Art¡¦&nbsp; This debut was not only widely celebrated, but also 
-praised as a ¡¥miracle¡¦ of this youth orchestra. This performance won the 
-attention of experts on Chinese music and gave rise to the symposium ¡¥The 
-Direction of Development of the State Orchestra ¡V inspiration from an Amateur 
+in which 70 musicians took part, including its debut concert â€˜Peony Pavilion&nbsp; â€“&nbsp; 
+Xun-Fa Yuâ€™s Dizi Artâ€™&nbsp; This debut was not only widely celebrated, but also 
+praised as a â€˜miracleâ€™ of this youth orchestra. This performance won the 
+attention of experts on Chinese music and gave rise to the symposium â€˜The 
+Direction of Development of the State Orchestra â€“ inspiration from an Amateur 
 orchestra. &nbsp;</font></p>
-<p class="MsoNormal"><font color="#000080">In 2004 the orchestra went on two concert tours: ¡¥A Series 
-of Concerts Passing on the Touch between Taiwan and China¡¦, and ¡¥A Series of 
-Concerts for Young musicians¡¦.&nbsp; These included numerous collaborations with 
+<p class="MsoNormal"><font color="#000080">In 2004 the orchestra went on two concert tours: â€˜A Series 
+of Concerts Passing on the Touch between Taiwan and Chinaâ€™, and â€˜A Series of 
+Concerts for Young musiciansâ€™.&nbsp; These included numerous collaborations with 
 Chinese instrument soloists: among others Xun-Fa Yu (dizi).&nbsp; His-Rong Wang (pipa), 
 Ke-Mei Jiang (banhu), Jiang-Bin Liu (suona).&nbsp; Tze-You Lin (suona).&nbsp; Ying 
 Wang(erhu), Hui Lee(percussion), Wei-Wei Lan(pipa), Ming-Yu Wang (erhu), etc.&nbsp; 
-The orchestra was also selected for the ¡¥Taipei Traditional Festival¡¦ organized 
-by the Taipei Municipality, performing a Si-Zhu chamber concert in the Taipei¡¦s 
+The orchestra was also selected for the â€˜Taipei Traditional Festivalâ€™ organized 
+by the Taipei Municipality, performing a Si-Zhu chamber concert in the Taipeiâ€™s 
 municipal Zhoung-Shan Hall.&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080">In 2005 the little Giant Chinese Chamber Orchestra was 
 selected for support and development by the Taiwan Council for Culture Affairs.&nbsp; 
@@ -189,13 +189,13 @@ Orchestra &nbsp;</font></p>
 1995 by enthusiastic Chinese music lovers who wished to promote Chinese music 
 within our multicultural society.&nbsp; It provides a platform for Chinese music 
 lovers and promotes Chinese music in the wider community. Its aim is to share 
-Chinese musical culture with others to increase Canada¡¦s understanding of 
+Chinese musical culture with others to increase Canadaâ€™s understanding of 
 Chinese culture through music.&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080">The BCCMA is fortunate to have Honorary President Mr. S.K. 
 Lee, Honorary Patron Dr. Paul C.H. Wong, and Honorary Advisors: Mr. Ni-Chung 
 Kwan, Mr. Cheng-Fu Liu, Professor Alan Thrasher, Mr. Leung-Tak Tong, Mr. Hui-Chang 
 Yan and Mr. Cheng-Long Zhou for guidance and support in achiving the 
-association¡¦s goals with professionalism.&nbsp;</font></p>
+associationâ€™s goals with professionalism.&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080">The B.C. Chinese orchestra (BCCO) has been performing 
 regularly in various culture, festive, and charitable events for the community.&nbsp; 
 The B. C. Chinese Music Ensemble (BCCME) and the B.C. Youth Chinese Orchestra (BCYCO) 
@@ -229,13 +229,13 @@ guitar), hulusi (gourd based reed instrument), gaohu (high-pitched bowed lute),
 erhu (python-skin bowed lute),guzheng (Chinese zither/harp), xiao (vertical 
 bamboo flute), and various percussion instruments. The group has been carefully 
 constructed from the best professional Chinese musicians in the region including 
-faculty from York University and Toronto¡¦s music departments, prolific soloists, 
+faculty from York University and Torontoâ€™s music departments, prolific soloists, 
 and leading members of the Toronto Chinese Orchestra. Members of the ensemble 
 have performed across Canada, the United States, Poland, Britain, Hong Kong, 
 Singapore, and mainland China, and for dignitarics&nbsp; such as the former president 
 elect of Poland Stanislaw Taminski . Their performances have been broadcast 
 across China on CCTV. This pedigree has helped to develop the Yellow River 
-Ensemble¡¦s reputation as one of the best Chinese music ensembles in the 
+Ensembleâ€™s reputation as one of the best Chinese music ensembles in the 
 country.&nbsp;</font></p>
 <p class="MsoNormal"><font color="#000080">The Yellow River Ensemble plays under the leadership of Dr. 
 Kim Chow-Morris, an internally performing dizi virtuoso, and one of the leading 
@@ -252,7 +252,7 @@ accommodates requests for performances of between two and five players, in
 accordance with organizers requests. The ensemble has a wide range of repertoire 
 and generally provides musical performances of between half an hour to two hours 
 in length.</font><br>
-¡@</td>
+ã€€</td>
 
 </tr>
 
@@ -263,8 +263,8 @@ in length.</font><br>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -293,7 +293,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
