--- a/ecpa2011/2011-anniversary.html
+++ b/ecpa2011/2011-anniversary.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association tenth anniversary concert" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../CSS/s1.css" type="text/css" media="screen" />
 
 
@@ -108,11 +108,11 @@ a:active     { color: #008000 }
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><b><font color="#FFFF00"><br>
-	·R«°¥Á¼Ö¹Î ¦¨¥ß¤Q©P¦~­µ¼Ö·| <br>
+	æ„›åŸæ°‘æ¨‚åœ˜ æˆç«‹åå‘¨å¹´éŸ³æ¨‚æœƒ <br>
 	Edmonton Chinese Philharmonica 10th Anniversary Concert<br>
-¡@</font></b></td>
+ã€€</font></b></td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -120,15 +120,15 @@ a:active     { color: #008000 }
 <tr>
 
 <td align="left" width="620" bordercolor="#FFFFFF" valign="top">
-¡@<p align="center"><b><font color="#000080">10th Anniversary Concert ¡§The Music 
-Carries On¡¨ </font></b>
-<p align="center"><b><font size="5" color="#000080">§f«ß¶Ç­µ¤Q¸ü±¡</font></b><p align="center">
-<font color="#000080">October 22, 2011, Saturday, 7:30 pm 2011¦~10¤ë22¤é ¬P´Á¤»±ß¤W¤C®É¥b<br>
+ã€€<p align="center"><b><font color="#000080">10th Anniversary Concert â€œThe Music 
+Carries Onâ€ </font></b>
+<p align="center"><b><font size="5" color="#000080">å‘‚å¾‹å‚³éŸ³åè¼‰æƒ…</font></b><p align="center">
+<font color="#000080">October 22, 2011, Saturday, 7:30 pm 2011å¹´10æœˆ22æ—¥ æ˜ŸæœŸå…­æ™šä¸Šä¸ƒæ™‚åŠ<br>
 Convocation Hall, University of Alberta <br>
-¨È¬Ù¤j¾Ç²¦·~¥ÍÁp·|Â§°ó­µ¼ÖÆU</font><p align="center">
+äºçœå¤§å­¸ç•¢æ¥­ç”Ÿè¯æœƒç¦®å ‚éŸ³æ¨‚å»³</font><p align="center">
 <font color="#000080" size="4">Concert successfully completed view video here<br>
 <br>
-­µ¼Ö·|¶êº¡µ²§ô¡A½Ğ©ó¦¹Æ[¬İ¿ı¼v¡G<br>
+éŸ³æ¨‚æœƒåœ“æ»¿çµæŸï¼Œè«‹æ–¼æ­¤è§€çœ‹éŒ„å½±ï¼š<br>
 </font><br>
 <font color="#000080">
 <a target="_blank" href="http://www.youtube.com/user/ecpa2011#g/u">
@@ -145,21 +145,21 @@ photos by Jiang Hong</a><p>
 Photo by Joe&nbsp;&nbsp;&nbsp; <p><font color="#000080">
 <br>
 Tickets for the October 22 concert available at:<br>
-10¤ë22¤é±ß­µ¼Ö·|°â²¼ÂI: <br>
-Ticket price: $10 ²¼»ù: ¤Q¤¸ </font>
+10æœˆ22æ—¥æ™šéŸ³æ¨‚æœƒå”®ç¥¨é»: <br>
+Ticket price: $10 ç¥¨åƒ¹: åå…ƒ </font>
 <p><font color="#000080">
 Tix On the Square www.tixonthesquare.ca 780-420-1757<br>
 <a target="_blank" href="http://www.tixonthesquare.ca/event/detail/3969/">
 Purchased tickets from Tix On the Square here</a><br>
 <br>
-§Q³q®Ñ§½ Daily Book and Gifts&nbsp; 9700-105 Ave. 780-429-9006</font><p>
-<font color="#000080">µØ¥Í®ü¨ıÃÄ§÷¦æ (¦è¼¯¤j²ÎµØ¶W¥«¤º) <br>
+åˆ©é€šæ›¸å±€ Daily Book and Gifts&nbsp; 9700-105 Ave. 780-429-9006</font><p>
+<font color="#000080">è¯ç”Ÿæµ·å‘³è—¥æè¡Œ (è¥¿æ‘©å¤§çµ±è¯è¶…å¸‚å…§) <br>
 Wah Sun Chinese Herbs (West Edmonton Mall) 780-443-3742<br>
 <br>
-°ê»Ú®È¦æªÀ Citizen Travel Ltd.10653-97 St. 780-429-3388<br>
+åœ‹éš›æ—…è¡Œç¤¾ Citizen Travel Ltd.10653-97 St. 780-429-3388<br>
 <br>
-¡@</font><p align="center">
-<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; ·R«°¥Á¼Ö¹Î¥D¿ì<br>
+ã€€</font><p align="center">
+<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦<br>
 </font>
 </td>
 
@@ -172,8 +172,8 @@ Wah Sun Chinese Herbs (West Edmonton Mall) 780-443-3742<br>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -202,7 +202,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
