--- a/ecpa2011/2011-dinner-photos.html
+++ b/ecpa2011/2011-dinner-photos.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -105,11 +105,11 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center"><b><font color="#FFFF00">·R«°¥Á¼Ö¹Î ¦¨¥ß¤Q©P¦~­µ¼Ö·| <br>
+	<p align="center"><b><font color="#FFFF00">æ„›åŸæ°‘æ¨‚åœ˜ æˆç«‹åå‘¨å¹´éŸ³æ¨‚æœƒ <br>
 	Edmonton Chinese Philharmonica 10th Anniversary Concert</font></b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -119,7 +119,7 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF"  align="left" width="620" bordercolor="#FFFFFF" valign="top">
 <br>
 <img border="0" src="dinner/296854_183929058355523_174736785941417_395916_1887276659_n.jpg" width="384" height="566"><img border="0" src="dinner/297393_183928978355531_174736785941417_395912_1127223374_n.jpg" width="566" height="384"><img border="0" src="dinner/297479_183929115022184_174736785941417_395917_1002185467_n.jpg" width="384" height="566"><img border="0" src="dinner/297627_183928541688908_174736785941417_395906_634966177_n.jpg" width="566" height="384"><img border="0" src="dinner/298562_183929888355440_174736785941417_395931_1397020782_n.jpg" width="566" height="384"><img border="0" src="dinner/300634_183928685022227_174736785941417_395908_1404896752_n.jpg" width="566" height="384"><img border="0" src="dinner/300909_183927381689024_174736785941417_395882_1361361464_n.jpg" width="566" height="384"><img border="0" src="dinner/303959_183929251688837_174736785941417_395922_1847098657_n.jpg" width="384" height="566"><img border="0" src="dinner/310378_183929611688801_174736785941417_395926_1422636889_n.jpg" width="566" height="384"><img border="0" src="dinner/310884_183929938355435_174736785941417_395932_1309443914_n.jpg" width="566" height="384"><img border="0" src="dinner/311863_183928818355547_174736785941417_395909_819909174_n.jpg" width="566" height="384"><img border="0" src="dinner/312282_183930228355406_174736785941417_395933_1059885485_n.jpg" width="566" height="384"><img border="0" src="dinner/312788_183929811688781_174736785941417_395930_2045019051_n.jpg" width="566" height="384"><img border="0" src="dinner/314607_183928228355606_174736785941417_395901_1147984172_n.jpg" width="384" height="566"><img border="0" src="dinner/315502_183929331688829_174736785941417_395923_1549842666_n.jpg" width="566" height="384"><img border="0" src="dinner/318501_183929691688793_174736785941417_395928_683969611_n.jpg" width="566" height="384"><img border="0" src="dinner/318607_183927235022372_174736785941417_395880_492993063_n.jpg" width="566" height="384"><img border="0" src="dinner/320294_183929525022143_174736785941417_395925_486259054_n.jpg" width="566" height="384"><img border="0" src="dinner/377433_183927645022331_174736785941417_395884_382709433_n.jpg" width="566" height="384"><img border="0" src="dinner/380787_183927108355718_174736785941417_395877_2005706763_n.jpg" width="566" height="384"><img border="0" src="dinner/381666_183929741688788_174736785941417_395929_89461392_n.jpg" width="566" height="384"><img border="0" src="dinner/381872_183928305022265_174736785941417_395904_1029889440_n.jpg" width="566" height="384"><img border="0" src="dinner/382838_183927878355641_174736785941417_395892_2016069396_n.jpg" width="566" height="384"><img border="0" src="dinner/383418_183926508355778_174736785941417_395869_673780381_n.jpg" width="566" height="384"><img border="0" src="dinner/383436_183927168355712_174736785941417_395878_2089888713_n.jpg" width="566" height="384"><img border="0" src="dinner/384121_183929415022154_174736785941417_395924_1496621946_n.jpg" width="566" height="384"><img border="0" src="dinner/384596_183927061689056_174736785941417_395876_345249795_n.jpg" width="566" height="384"><img border="0" src="dinner/384645_183926838355745_174736785941417_395872_424344823_n.jpg" width="566" height="384"><img border="0" src="dinner/385104_183927328355696_174736785941417_395881_1562641784_n.jpg" width="566" height="384"><img border="0" src="dinner/385145_183928598355569_174736785941417_395907_217721354_n.jpg" width="566" height="384"><img border="0" src="dinner/386100_183926775022418_174736785941417_395871_1964797529_n.jpg" width="566" height="384"><img border="0" src="dinner/390204_183929198355509_174736785941417_395920_1992880442_n.jpg" width="566" height="384"><img border="0" src="dinner/390942_183927758355653_174736785941417_395888_1872654717_n.jpg" width="566" height="384"><img border="0" src="dinner/391037_183926905022405_174736785941417_395873_2037215890_n.jpg" width="566" height="384"><img border="0" src="dinner/392255_183928898355539_174736785941417_395910_1398385723_n.jpg" width="566" height="384"><img border="0" src="dinner/393365_183926978355731_174736785941417_395874_1156331388_n.jpg" width="566" height="384"><p>
-<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; ·R«°¥Á¼Ö¹Î¥D¿ì<br>
+<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦<br>
 </font>
 </td>
 
@@ -132,8 +132,8 @@ a:active     { color: #008000 }
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -162,7 +162,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
