--- a/ecpa2012/2012-concert.html
+++ b/ecpa2012/2012-concert.html
@@ -6,7 +6,7 @@
 <meta http-equiv="imagetoolbar" content="no">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -126,7 +126,7 @@ a:active     {
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><strong><span class="style3">&nbsp;October 20, 2012 ECP 
 	Concert - The Harmony</span><br class="style3"><span class="style3">2012 
-	¤Q¤ë </span></strong><span class="style3">¼ÖÃı±y·¨¤Q¤@¸ü­µ¼Ö·|</span></p>
+	åæœˆ </span></strong><span class="style3">æ¨‚éŸ»æ‚ æ¥Šåä¸€è¼‰éŸ³æ¨‚æœƒ</span></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -150,7 +150,7 @@ a:active     {
 	<br><br>
 </div>
 <p>
-<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; ·R«°¥Á¼Ö¹Î¥D¿ì<br>
+<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦<br>
 </font>
 </td>
 
@@ -164,8 +164,8 @@ a:active     {
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -189,6 +189,6 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 </body>
 </html>
