--- a/ecpa2013/201310-XinLiyuan.html
+++ b/ecpa2013/201310-XinLiyuan.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -112,7 +112,7 @@ a:active     { color: #008000 }
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><strong><span class="style3">Erhu Workshop by Ms. Liyuan Xing October 25,2013</span><br class="style3"><span class="style3">
-	­Jµ^¥Ü½d±Ğ¾ÇÁ¿®y - ¨·¥ß¤¸</span></strong></p>
+	èƒ¡ç´ç¤ºç¯„æ•™å­¸è¬›åº§ - é‚¢ç«‹å…ƒ</span></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -121,19 +121,19 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>Ms. Xing Liyuan, the two-time first prize winner of ¡§Tian Hua Cup¡¨ at the National Erhu Solo Competition, is currently an Erhu performing teacher of Shanghai Conservatory of Music. Ms. Xing¡¦s Erhu education began at age of six, and she gave her first performance on stage when she was seven. Since 1990, Ms. Xing had studied Erhu performance under Professor Ma Youde. In 2005, after seven years Erhu performance study with the tutoring of Professor Wang Yongde, Ms. Xing graduated from Shanghai Conservatory of Music with her Master degree and outstanding recording of academy and Erhu performance.
+	<strong>Ms. Xing Liyuan, the two-time first prize winner of â€œTian Hua Cupâ€ at the National Erhu Solo Competition, is currently an Erhu performing teacher of Shanghai Conservatory of Music. Ms. Xingâ€™s Erhu education began at age of six, and she gave her first performance on stage when she was seven. Since 1990, Ms. Xing had studied Erhu performance under Professor Ma Youde. In 2005, after seven years Erhu performance study with the tutoring of Professor Wang Yongde, Ms. Xing graduated from Shanghai Conservatory of Music with her Master degree and outstanding recording of academy and Erhu performance.
 <br/><br/>In the recent eighteen years, Ms. Xing has successfully given recitals at home and abroad. Meanwhile, as a soloist, Ms. Xing has cooperated and played with many famous orchestras, such as Shanghai Chinese orchestra, Shanghai Symphony orchestra, Shanghai Philharmonic, Symphony orchestra Kanazawa, Singapore Chinese orchestra, Taipei Chinese orchestra, etc. In 2002, Ms. Xing was invited by Itzak Perlman, the violin master, to have a special music conversation in Chinese string music and Western string music.
 <br/><br/>As a young performing artist, Ms. Xing has been active on the performing stages in china, Japan, Germany, France, Austria, Holland, Belgium, Luxemburg, Singapore and Taiwan. Meanwhile, as a young performing lector, Ms. Xing has also devoted herself to music education and academic activities. In 2006, Ms. Xing received a research fund prize awarded by Shanghai education authority.
 Since Aug 2013, Ms. Xing studies in the University of Alberta, Canada, as a scholar.
 
 Published Records:<br/>
-¡mXing Liyuan Solo. Concerto Live Concert¡n DVD <br/>
-¡mAr Bing Collected Volunme¡n CD <br/>
-¡mJing¡n CD <br/>
+ã€ŠXing Liyuan Solo. Concerto Live Concertã€‹ DVD <br/>
+ã€ŠAr Bing Collected Volunmeã€‹ CD <br/>
+ã€ŠJingã€‹ CD <br/>
 Series of Erhu Performing Teaching VCD <br/>
 <br></strong><br>
 	<a href="ErHu/XinLiyuanResumeChinese.doc" target="_blank">
-	<font color="#000080"><strong>¨·¥ß¤¸Â²¾ú (¤¤¤å)</strong></font>
+	<font color="#000080"><strong>é‚¢ç«‹å…ƒç°¡æ­· (ä¸­æ–‡)</strong></font>
 	</a>
 	<br><br>
 	        
@@ -145,7 +145,7 @@ Series of Erhu Performing Teaching VCD <br/>
 </div>
 <br/>
 <p align="center">
-	<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada<br/> ·R«°¥Á¼Ö¹Î¥D¿ì
+	<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada<br/> æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦
 	</font>
 </p>
 </td>
@@ -159,7 +159,7 @@ Series of Erhu Performing Teaching VCD <br/>
 
 </tr>
 </table>
-      <p>¡@</p>
+      <p>ã€€</p>
 
 </table>
 </td>
@@ -186,7 +186,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
