--- a/ecpa2014/20140126-NewYearCarnival.html
+++ b/ecpa2014/20140126-NewYearCarnival.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -128,7 +128,7 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>ECPA performance for Chinese new year 2014.<br></strong><br>
-	<strong>2014¦~¹A¾ä·s¦~ªíºt</strong><br><br>
+	<strong>2014å¹´è¾²æ›†æ–°å¹´è¡¨æ¼”</strong><br><br>
 	</font>
 </div>
 </td>
@@ -188,7 +188,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
