--- a/ecpa2014/20140701-CanadaDayPerf.html
+++ b/ecpa2014/20140701-CanadaDayPerf.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -132,7 +132,7 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>Canada Day celebration hosted by the Edmonton Viets Association and the Edmonton Korean Canadian Women¡¦s Association
+	<strong>Canada Day celebration hosted by the Edmonton Viets Association and the Edmonton Korean Canadian Womenâ€™s Association
 	<br></strong><br>
 	<strong><br></strong><br>
 	</font>
@@ -210,7 +210,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
