--- a/ecpa2014/20141012-ChineseMusicFestival.html
+++ b/ecpa2014/20141012-ChineseMusicFestival.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -155,8 +155,8 @@ a:active     { color: #008000 }
 	<td><br/>
 		<a href="https://www.youtube.com/watch?v=V46Nnl1lE50&amp;feature=youtu.be"  target="_blank">HanTV - Edmonton Chinese Music Festival Showcase</a>
 		<br/>
-		<font color="#000080">±ıªY½à¤¤¼Ö¸`ªººt¥X, ½ĞÂIÀ» </font>
-		<a href="https://www.youtube.com/channel/UCNSM9fIXO__dBqTrtLCxsFg/videos">ºt¥X¿ı¹³</a>
+		<font color="#000080">æ¬²æ¬£è³ä¸­æ¨‚ç¯€çš„æ¼”å‡º, è«‹é»æ“Š </font>
+		<a href="https://www.youtube.com/channel/UCNSM9fIXO__dBqTrtLCxsFg/videos">æ¼”å‡ºéŒ„åƒ</a>
 		<br/>
 		<font color="#000080">To View All The Videos of The Performance, Please Click </font>
 		<a href="https://www.youtube.com/channel/UCNSM9fIXO__dBqTrtLCxsFg/videos">Videos</a>	
@@ -241,7 +241,7 @@ a:active     { color: #008000 }
 <tr>
 <td>
 <p align="center">
-	<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada<br/> ·R«°¥Á¼Ö¹Î¥D¿ì
+	<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada<br/> æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦
 	</font>
 </p>
 </td>
@@ -280,7 +280,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
