--- a/ecpa2015/20150926-MidAutumn.html
+++ b/ecpa2015/20150926-MidAutumn.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -135,7 +135,7 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center"><strong><span class="style3">Performance for Chinese School Mid-Autumn Festival celebration at Edmonton Chinese Alliance Church ¬°¨ä¤¤¤å¾Ç®Õ¤§¤¤¬î¸`¼y¯¬ªíºt§U¼y (·R«°µØ¤H«Å¹D·|) - September 26, 2016</span><br class="style3"></strong></p>
+	<p align="center"><strong><span class="style3">Performance for Chinese School Mid-Autumn Festival celebration at Edmonton Chinese Alliance Church ç‚ºå…¶ä¸­æ–‡å­¸æ ¡ä¹‹ä¸­ç§‹ç¯€æ…¶ç¥è¡¨æ¼”åŠ©æ…¶ (æ„›åŸè¯äººå®£é“æœƒ) - September 26, 2016</span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -145,7 +145,7 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>Performance at Edmonton Chinese Alliance Church on Sept 26, 2015 for Chinese School Mid-Autumn Festival celebration 
-	<br/> ¤G¹s¤@¤­¦~¤E¤ë¤Ü¤»¤é«e©¹·R«°µØ¤H«Å¹D·|, ¬°¨ä¤¤¤å¾Ç®Õ¤§¤¤¬î¸`¼y¯¬ªíºt§U¼y¡C
+	<br/> äºŒé›¶ä¸€äº”å¹´ä¹æœˆå»¿å…­æ—¥å‰å¾€æ„›åŸè¯äººå®£é“æœƒ, ç‚ºå…¶ä¸­æ–‡å­¸æ ¡ä¹‹ä¸­ç§‹ç¯€æ…¶ç¥è¡¨æ¼”åŠ©æ…¶ã€‚
 	<br></strong><br>
 	<strong><br></strong><br>
 	</font>
@@ -206,7 +206,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
