--- a/ecpa2017/20171015-Swordsmen.html
+++ b/ecpa2017/20171015-Swordsmen.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -145,24 +145,24 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <!--<div class="style4"> -->
 <font color="#000080">
-	<strong>¤G¹s¤@¤C¦~¤Q¤ë¤Q¤­¤é ·R«°¥Á¼Ö¹Î¤Q¤»¶g¦~­µ¼Ö·|¡GªZ«L¬K¬î </strong>
+	<strong>äºŒé›¶ä¸€ä¸ƒå¹´åæœˆåäº”æ—¥ æ„›åŸæ°‘æ¨‚åœ˜åå…­é€±å¹´éŸ³æ¨‚æœƒï¼šæ­¦ä¿ æ˜¥ç§‹ </strong>
 	<br><br>
-	<strong>¥H¤U¬O¤Q¤ë­µ¼Ö·|³¡¥÷¼Ö¦±ªºµøÀW, ½Ğµn¤JªY½à¡C<br>
+	<strong>ä»¥ä¸‹æ˜¯åæœˆéŸ³æ¨‚æœƒéƒ¨ä»½æ¨‚æ›²çš„è¦–é », è«‹ç™»å…¥æ¬£è³ã€‚<br>
 Below are the links of a number of songs from the Oct concert. Please enjoy.</strong><br>
 	</font>
 	<br>	  
-	<a target="_blank" href="https://m.youtube.com/watch?v=de_KuJhdIAU">1. Overture of the Dagger Society Suite (Orchestral Ensemble) ¤p¤M·|²Õ¦±</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=naKlgeFqulY">2. The Bank of Qiantang River (Orchestral Ensemble) ¿ú¶í¦¿¯`</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=js-c4kPVFPY">4. The Fancy Opera Tune from Hebei (Banhu & Orchestra) ªá±õ¤l</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=ZuC5sutTkPY">5. Chrysanthemum Terrace (Cello¡BErhu & Orchestra) µâªá¥x</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=hcxPqWrng8U">6. The Rats¡¦ Wedding ¦Ñ¹«°ù¿Ë</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=MhL7F-BPtyg">9. Three Six (Yangqin & Cello) ¤T¤»</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=C8AIO-L2Rjg">10. Deep Dark Night (Jinghu & Orchestra) ©]²`¨I</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=j2mACiaEDLY">11. Sichuan General March (Yangqin & Orchestra) ¥|¤t±N­x¥O</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=iCXElSPaRpE">12. Crossing the Dadu River (Orchestral Ensemble) ¤j´çªe</a> <br>
-	<a target="_blank" href="https://youtu.be/CsfyMoIuN_U">13. The Path-breaker General March (Orchestral Ensemble) Âô±N¥O</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=Q3vVwARXAHc">14. (Encore) ¥@¶¡©l²×§A¦n</a> <br>
-	<a target="_blank" href="https://m.youtube.com/watch?v=akBtzXBhaAw">15. (Encore) Âô±N¥O</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=de_KuJhdIAU">1. Overture of the Dagger Society Suite (Orchestral Ensemble) å°åˆ€æœƒçµ„æ›²</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=naKlgeFqulY">2. The Bank of Qiantang River (Orchestral Ensemble) éŒ¢å¡˜æ±Ÿç•”</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=js-c4kPVFPY">4. The Fancy Opera Tune from Hebei (Banhu & Orchestra) èŠ±æ¢†å­</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=ZuC5sutTkPY">5. Chrysanthemum Terrace (Celloã€Erhu & Orchestra) èŠèŠ±å°</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=hcxPqWrng8U">6. The Ratsâ€™ Wedding è€é¼ å¨¶è¦ª</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=MhL7F-BPtyg">9. Three Six (Yangqin & Cello) ä¸‰å…­</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=C8AIO-L2Rjg">10. Deep Dark Night (Jinghu & Orchestra) å¤œæ·±æ²‰</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=j2mACiaEDLY">11. Sichuan General March (Yangqin & Orchestra) å››å·å°‡è»ä»¤</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=iCXElSPaRpE">12. Crossing the Dadu River (Orchestral Ensemble) å¤§æ¸¡æ²³</a> <br>
+	<a target="_blank" href="https://youtu.be/CsfyMoIuN_U">13. The Path-breaker General March (Orchestral Ensemble) é—–å°‡ä»¤</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=Q3vVwARXAHc">14. (Encore) ä¸–é–“å§‹çµ‚ä½ å¥½</a> <br>
+	<a target="_blank" href="https://m.youtube.com/watch?v=akBtzXBhaAw">15. (Encore) é—–å°‡ä»¤</a> <br>
  <br>
 	</td>
 </tr>
@@ -277,7 +277,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
