--- a/ecpa2019/20190217-Festival.html
+++ b/ecpa2019/20190217-Festival.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -148,7 +148,7 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center"><strong><span class="style3">²Ä¤T©¡·R¥Á¹y¤¤¼Ö¸`</span><br class="style3"></strong></p>
+	<p align="center"><strong><span class="style3">ç¬¬ä¸‰å±†æ„›æ°‘é “ä¸­æ¨‚ç¯€</span><br class="style3"></strong></p>
 	<p align="center"><strong><span class="style3">The 3rd Edmonton Chinese Music Festival - February 17, 2019</span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
@@ -159,11 +159,11 @@ a:active     { color: #008000 }
 <!--<div class="style4"> -->
 <font color="#000080">
 <br>
-	<strong>¥H¤U¬O²Ä¤T©¡·R¥Á¹y¤¤¼Ö¸`³¡¥÷¼Ö¦±ªºµøÀW, ½Ğµn¤JªY½à¡C<br>
+	<strong>ä»¥ä¸‹æ˜¯ç¬¬ä¸‰å±†æ„›æ°‘é “ä¸­æ¨‚ç¯€éƒ¨ä»½æ¨‚æ›²çš„è¦–é », è«‹ç™»å…¥æ¬£è³ã€‚<br>
 Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</strong><br>
 	</font>
 	<br>	  
-	<a target="_blank" href="https://www.youtube.com/channel/UCH9LA1nBl6z_g2YdS-xwzig">The 3rd Edmonton Chinese Music Festival ²Ä¤T©¡·R¥Á¹y¤¤¼Ö¸`</a> <br><br>
+	<a target="_blank" href="https://www.youtube.com/channel/UCH9LA1nBl6z_g2YdS-xwzig">The 3rd Edmonton Chinese Music Festival ç¬¬ä¸‰å±†æ„›æ°‘é “ä¸­æ¨‚ç¯€</a> <br><br>
 	</td>
 	
 </tr>
@@ -171,7 +171,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">Arrival ±µ¾÷</font>
+<font color="#000080">Arrival æ¥æ©Ÿ</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -183,7 +183,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">WEM ¹CÄı¦è¼¯°Ó³õ</font>
+<font color="#000080">WEM éŠè¦½è¥¿æ‘©å•†å ´</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -193,7 +193,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">Meadowlark School Performance ¬ü¼w¼Ö¾Ç®Õ¤é¶¡ºt¥X</font>
+<font color="#000080">Meadowlark School Performance ç¾å¾·æ¨‚å­¸æ ¡æ—¥é–“æ¼”å‡º</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -210,7 +210,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">Welcome Lunch Åwªï¤ÈÀ\·|</font>
+<font color="#000080">Welcome Lunch æ­¡è¿åˆé¤æœƒ</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -229,7 +229,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">Junior Room Rehearsal ³Ì«á±Æ½m</font>
+<font color="#000080">Junior Room Rehearsal æœ€å¾Œæ’ç·´</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -245,7 +245,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">Concert Day »R¥x¤W</font>
+<font color="#000080">Concert Day èˆå°ä¸Š</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -277,7 +277,7 @@ Below is the link of The 3rd Edmonton Chinese Music Festival. Please enjoy.</str
 
 <tr>
 <td>
-<font color="#000080">Farewell Dinner À^§O±ß®b</font>
+<font color="#000080">Farewell Dinner é¤åˆ¥æ™šå®´</font>
 <p align="center">
 <div class='titleSeparator'>
 </div>
@@ -332,7 +332,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
