--- a/ecpa2006/2006-concert-pics.html
+++ b/ecpa2006/2006-concert-pics.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 <link rel="stylesheet" href="../CSS/s1.css" type="text/css" media="screen" />
 
@@ -133,7 +133,7 @@
 <span style="font-family: Futurist; color: #FFFFFF"><br>
 </span><span style="font-family: Futurist; "><b><font size="3" color="#FFFF00">
 2006 Harvest Gong and Drum Concert</font><font size="5" color="#FFFF00"><br>
-¡@</font></b></span><p><span style="font-family: Futurist; color: #FFFFFF">Jubilee Auditorium</span><font color="#FFFFFF">&nbsp;</font><span style="font-family: Futurist; color: #FFFFFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+ã€€</font></b></span><p><span style="font-family: Futurist; color: #FFFFFF">Jubilee Auditorium</span><font color="#FFFFFF">&nbsp;</font><span style="font-family: Futurist; color: #FFFFFF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 May 13, 2006. (Sat)</span>&iexcl;&iexcl;</p></td>
 
 </tr>
@@ -863,9 +863,9 @@ his Teeth&quot;</font></td>
 </tr>
 
 <tr>
-<td bgcolor="#FF0000" width="18" valign="middle" align="center" height="83">¡@</td>
+<td bgcolor="#FF0000" width="18" valign="middle" align="center" height="83">ã€€</td>
 
-<td bgcolor="#FF0000" width="597" valign="middle" align="left" height="83">¡@</td>
+<td bgcolor="#FF0000" width="597" valign="middle" align="left" height="83">ã€€</td>
 
 </tr>
 </table>
