--- a/ecpa2007/2007-concert-pics2.html
+++ b/ecpa2007/2007-concert-pics2.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 
 </head>
@@ -122,7 +122,7 @@
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="580" height="24">&nbsp;
   <font color="#FFFF00"><span lang="ZH-TW" style="font-family: PMingLiU">
-·R«°¥Á¼Ö¹Î¦¨¥ß¤»©P¦~ºt«µ·|</span><span style="font-family: PMingLiU">&nbsp; <br>
+æ„›åŸæ°‘æ¨‚åœ˜æˆç«‹å…­å‘¨å¹´æ¼”å¥æœƒ</span><span style="font-family: PMingLiU">&nbsp; <br>
 	</span><span lang="ZH-TW" style="font-family: PMingLiU"><br>
 	</span><b><font size="2">2007 Edmonton Chinese Philharmonica 6th Anniversary Concert 
 </font></b> </font>
@@ -131,7 +131,7 @@
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
 <p><img border="0" src="../2007pics/js/DSC_0095.jpg" width="566" height="447"></p>
@@ -151,7 +151,7 @@
 <p><img border="0" src="../2007pics/js/DSC_0143.jpg" width="566" height="333"></p>
 <p><img border="0" src="../2007pics/js/DSC_0144.jpg" width="566" height="408"></p>
 <p><img border="0" src="../2007pics/js/DSC_0147.jpg" width="566" height="408"></p>
-<p>¡@</p>
+<p>ã€€</p>
 <p><img border="0" src="../2007pics/js/DSC_0148.jpg" width="566" height="408"></p>
 <p><img border="0" src="../2007pics/js/DSC_0168.jpg" width="566" height="408"></p>
 <p><img border="0" src="../2007pics/js/DSC_0175.jpg" width="566" height="408"></p>
@@ -198,7 +198,7 @@
 <p><img border="0" src="../2007pics/js/DSC_0374.jpg" width="566" height="384"></p>
 <p><img border="0" src="../2007pics/js/DSC_0390.jpg" width="566" height="384"></p>
 <p><img border="0" src="../2007pics/js/DSCF2874.jpg" width="566" height="533"></p>
-<p>¡@</p>
+<p>ã€€</p>
 <p><img border="0" src="../2007pics/js/DSCF2898.jpg" width="490" height="566"></p></td>
 
 </tr>
@@ -207,7 +207,7 @@
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -219,8 +219,8 @@
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
