--- a/ecpa2007/mid-autumn-2006.html
+++ b/ecpa2007/mid-autumn-2006.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="CSS/s1.html" type="text/css" media="screen" />
 
 </head>
@@ -134,7 +134,7 @@
 Edmonton, Alberta</font><font size="5" color="#FFFF00"><br>
 </font><font color="#FFFF00" size="2">Oct 1, 2006&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 Mid-autumn Festival</font></b><span style="font-family: Futurist; color: #FFFFFF"><br>
-¡@</span></td>
+ã€€</span></td>
 
 </tr>
 
@@ -157,7 +157,7 @@ Mid-autumn Festival</font></b><span style="font-family: Futurist; color: #FFFFFF
 </tr>
 
 <tr>
-<td width="18" height="63" align="center" bgcolor="#000000">¡@</td>
+<td width="18" height="63" align="center" bgcolor="#000000">ã€€</td>
 
 <td align="left" width="497" height="63">
 <img border="0" src="images/2006-concert-03.jpg" width="400" height="225"></td>
@@ -165,7 +165,7 @@ Mid-autumn Festival</font></b><span style="font-family: Futurist; color: #FFFFFF
 </tr>
 
 <tr>
-<td width="18" height="63" align="center" bgcolor="#000000">¡@</td>
+<td width="18" height="63" align="center" bgcolor="#000000">ã€€</td>
 
 <td align="left" width="497" height="63">
 <img border="0" src="images/2006-concert-04.jpg" width="400" height="225"></td>
@@ -173,7 +173,7 @@ Mid-autumn Festival</font></b><span style="font-family: Futurist; color: #FFFFFF
 </tr>
 
 <tr>
-<td width="18" height="63" align="center" bgcolor="#000000">¡@</td>
+<td width="18" height="63" align="center" bgcolor="#000000">ã€€</td>
 
 <td align="left" width="497" height="63">
 <img border="0" src="images/2006-concert-05.jpg" width="400" height="300"></td>
@@ -181,7 +181,7 @@ Mid-autumn Festival</font></b><span style="font-family: Futurist; color: #FFFFFF
 </tr>
 
 <tr>
-<td width="18" height="63" align="center" bgcolor="#000000">¡@</td>
+<td width="18" height="63" align="center" bgcolor="#000000">ã€€</td>
 
 <td align="left" width="497" height="63">
 <img border="0" src="images/2006-concert-06.jpg" width="400" height="267"></td>
@@ -208,7 +208,7 @@ Mid-autumn Festival</font></b><span style="font-family: Futurist; color: #FFFFFF
 ecpa2001@hotmail.com</a></font>
 
 <p>
-¡@</p>
+ã€€</p>
 
 <p>&nbsp;&nbsp;</p>
 </td></tr></table>
