--- a/ecpa2008/2008-bilingual.html
+++ b/ecpa2008/2008-bilingual.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -136,10 +136,10 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('card_left_new.gif');
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-¡@<p><img border="0" src="images/CNY-1.jpg" width="516" height="350"></p>
+ã€€<p><img border="0" src="images/CNY-1.jpg" width="516" height="350"></p>
 <p><img border="0" src="images/CNY-2.jpg" width="516" height="350"></p>
 <p><img border="0" src="images/CNY-3.jpg" width="516" height="350"></p>
 <p><img border="0" src="images/CNY-4.jpg" width="516" height="350"></td>
@@ -164,8 +164,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('card_left_new.gif');
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
