--- a/ecpa2008/2008-north-meet-south 2.html
+++ b/ecpa2008/2008-north-meet-south 2.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -136,7 +136,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('card_left_new.gif');
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
 <p><a target="_blank" href="2008-north-meet-south.html">Pictures of the 
@@ -146,14 +146,14 @@ concert</a><br>
 <p><a target="_blank" href="2008-north-meet-south.html">Pictures of the 
 concert</a></p>
 <p><a href="2008-rehearsal.html">Rehearsal pictures</a></p>
-<p>¡@</p>
+<p>ã€€</p>
 <p>(End of pictures)</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</td>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</td>
 
 </tr>
 
@@ -161,9 +161,9 @@ concert</a></p>
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -175,8 +175,8 @@ concert</a></p>
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
