--- a/ecpa2009/2009-Sandra-Wong.html
+++ b/ecpa2009/2009-Sandra-Wong.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -128,9 +128,9 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<tr>
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="616" height="24">
-	<font face="Trebuchet MS" color="#FFFF00">¶À¬ü¼_»P²³¦P¼Ö¤§²H²H«Õ±¡ºt°Û·|&nbsp;&nbsp;&nbsp;&nbsp; 
-	¬°·R«°¤¤µØ¤å¤Æ¤¤¤ß - ¤¤¤å¹Ï®ÑÀ]Äw´Ú&nbsp;&nbsp;&nbsp;&nbsp; <br>
-&nbsp;¤G¹s¹s¤E¦~¤­¤ë¤Q¤é¡]¬P´Á¤é¡^¤U¤È¤C®É¥b&nbsp;&nbsp;&nbsp; ¦aÂI¡R·R«°¥«¤¤¤ß·Å¤h¤ñ¨È­µ¼ÖÆU<br>
+	<font face="Trebuchet MS" color="#FFFF00">é»ƒç¾å«»èˆ‡çœ¾åŒæ¨‚ä¹‹æ·¡æ·¡å¹½æƒ…æ¼”å”±æœƒ&nbsp;&nbsp;&nbsp;&nbsp; 
+	ç‚ºæ„›åŸä¸­è¯æ–‡åŒ–ä¸­å¿ƒ - ä¸­æ–‡åœ–æ›¸é¤¨ç±Œæ¬¾&nbsp;&nbsp;&nbsp;&nbsp; <br>
+&nbsp;äºŒé›¶é›¶ä¹å¹´äº”æœˆåæ—¥ï¼ˆæ˜ŸæœŸæ—¥ï¼‰ä¸‹åˆä¸ƒæ™‚åŠ&nbsp;&nbsp;&nbsp; åœ°é»ï¹•æ„›åŸå¸‚ä¸­å¿ƒæº«å£«æ¯”äºéŸ³æ¨‚å»³<br>
 	Sandra Wong &amp; Friends Recital 2009<br>
 	Fund raising for the Chinese Library at Edmonton Chinatown Multicultural 
 	Centre<br>
@@ -139,7 +139,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
 <p><img border="0" src="Sandra_Wong%2003.jpg" width="600" height="195"></p>
@@ -154,7 +154,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -166,8 +166,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
