--- a/ecpa2009/2009-Taiwan-week.html
+++ b/ecpa2009/2009-Taiwan-week.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -128,15 +128,15 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<tr>
 	<td bgcolor="#FF0000" width="4" height="24"></td>
   	<td bgcolor="#FF0000" width="616" height="24">
-	<font face="Trebuchet MS" color="#FFFF00">·R«° &lt;¥_¬ü¦a°Ï¥xÆW¶Ç²Î¶g&gt;&nbsp; ­µ¼Ö·|&nbsp;&nbsp;&nbsp;&nbsp; <br>
-&nbsp;¤G¹s¹s¤E¦~¥|¤ë¤T¤Q¤é¡]¬P´Á¥|¡^&nbsp;&nbsp;&nbsp; ¦aÂI¡R·R«°&#32500;¦h§Q¨ÈºtÃÀ¾Ç°|­µ¼ÖÆU<br>
+	<font face="Trebuchet MS" color="#FFFF00">æ„›åŸ &lt;åŒ—ç¾åœ°å€å°ç£å‚³çµ±é€±&gt;&nbsp; éŸ³æ¨‚æœƒ&nbsp;&nbsp;&nbsp;&nbsp; <br>
+&nbsp;äºŒé›¶é›¶ä¹å¹´å››æœˆä¸‰åæ—¥ï¼ˆæ˜ŸæœŸå››ï¼‰&nbsp;&nbsp;&nbsp; åœ°é»ï¹•æ„›åŸ&#32500;å¤šåˆ©äºæ¼”è—å­¸é™¢éŸ³æ¨‚å»³<br>
 	Edmonton Taiwan Traditional Week Concert<br>
 	April 30, 2009 at The Victoria School of Performing and Visual Arts</font></td>
 
 </tr>
 
 <tr>
-<td width="4" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="4" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
 <p><img border="0" src="DSC_4173%5b1%5d.jpg" width="616" height="414"></p>
@@ -151,7 +151,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 <td width="4" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -163,8 +163,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
