--- a/ecpa2009/2009-catholic.html
+++ b/ecpa2009/2009-catholic.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -128,15 +128,15 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<tr>
 	<td bgcolor="#FF0000" width="4" height="24"></td>
   	<td bgcolor="#FF0000" width="616" height="24">
-	<font face="Trebuchet MS" color="#FFFF00">¤G¹s¹s¤E¦~&nbsp;&nbsp; µØ¤H¤Ñ¥D°ó&nbsp;&nbsp; 
-	¤ÑºÖº¡¬Õ¶P¤û¦~&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ¤@¤ë¤Q¤C¡B¤Q¤K¤é<br>
+	<font face="Trebuchet MS" color="#FFFF00">äºŒé›¶é›¶ä¹å¹´&nbsp;&nbsp; è¯äººå¤©ä¸»å ‚&nbsp;&nbsp; 
+	å¤©ç¦æ»¿ç›ˆè³€ç‰›å¹´&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ä¸€æœˆåä¸ƒã€åå…«æ—¥<br>
 	Chinese Catholic Parish&nbsp;&nbsp; Chinese New Year Carnival <br>
 	January 17, 18 , 2009&nbsp;&nbsp; Edmonton, Alberta</font></td>
 
 </tr>
 
 <tr>
-<td width="4" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="4" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
 <p><img border="0" src="DSC_0039_3_1.jpg" width="616" height="474"></p>
@@ -152,9 +152,9 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 <td width="4" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="616" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -166,8 +166,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
