--- a/ecpa2009/2009-cny-wem.html
+++ b/ecpa2009/2009-cny-wem.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -128,17 +128,17 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<tr>
 	<td bgcolor="#FF0000" width="5" height="24"></td>
   	<td bgcolor="#FF0000" width="580" height="24">
-	<font face="Trebuchet MS" color="#FFFF00">¤G ¹s ¹s ¤E ¦~ ¹A ¾ä ·s ¦~ ¦~ ®d ªá ¥«<br>
+	<font face="Trebuchet MS" color="#FFFF00">äºŒ é›¶ é›¶ ä¹ å¹´ è¾² æ›† æ–° å¹´ å¹´ å®µ èŠ± å¸‚<br>
 	Lunar New Year Extravaganza : 2009 Year of the Ox<br>
 	January 24, 2009 West Edmonton Mall, Edmonton, Alberta</font></td>
 
 </tr>
 
 <tr>
-<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">¡@</td>
+<td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF">ã€€</td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-¡@<p><img border="0" src="2009%20wem%2001.jpg" width="616" height="353"></p>
+ã€€<p><img border="0" src="2009%20wem%2001.jpg" width="616" height="353"></p>
 <p><img border="0" src="2009%20wem%2002.jpg" width="616" height="353"></p>
 <p><img border="0" src="2009%20wem%2004.jpg" width="616" height="372"></p>
 <p><img border="0" src="2009%20wem%2003.jpg" width="616" height="448"></p>
@@ -150,9 +150,9 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 <td width="5" height="63" align="center" bgcolor="#FFFFFF" bordercolor="#FFFFFF"></td>
 
 <td align="left" width="580" height="63" bordercolor="#FFFFFF">
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -164,8 +164,8 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
