--- a/ecpa2009/2009-xiang.html
+++ b/ecpa2009/2009-xiang.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="../ecpa2007/CSS/s1.html" type="text/css" media="screen" />
 
 <style>
@@ -129,7 +129,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<td bgcolor="#FF0000" height="24">
 	<font color="#FFFF00" size="5">
 	<a target="_blank" href="2009-xiang-photos.html"><font color="#FFFF00">
-	¡uºŞ²Íºå½÷Ä£·R«°¡v­µ¼Ö·|¶êº¡µ²§ô&nbsp;&nbsp; Æ[¬İ·Ó¤ù</font></a></font><p>
+	ã€Œç®¡çµƒç®è¼è€€æ„›åŸã€éŸ³æ¨‚æœƒåœ“æ»¿çµæŸ&nbsp;&nbsp; è§€çœ‹ç…§ç‰‡</font></a></font><p>
 	<a target="_blank" href="2009-xiang-photos.html">
 	<font color="#FFFF00" size="4">The concert is now successfully completed.&nbsp; Click 
 	here to view 
@@ -140,7 +140,7 @@ td{font-family:arial,sans-serif}.cbln{background-image:url('../ecpa2008/card_lef
 	<p>
 	<img border="0" src="02%20concert%20620.jpg" width="620" height="599"></p></td>
   	<td bgcolor="#FF0000" width="4" height="24">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -153,7 +153,7 @@ of Edmonton.</font><br>
 <img border="0" src="04%20gina%20choi.jpg" width="471" height="263"><br>
 <font color="#FF0000">Co-sponsored by The Music Lovers Gu Zheng Society and Alberta Chinese Music 
 Association</font><img border="0" src="03%20concert%20620.jpg" width="620" height="82"></p>
-<p>¡@</p>
+<p>ã€€</p>
 </td>
 
 </tr>
@@ -165,8 +165,8 @@ Association</font><img border="0" src="03%20concert%20620.jpg" width="620" heigh
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -195,7 +195,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
