--- a/ecpa2010/2010-Heritage-Month.html
+++ b/ecpa2010/2010-Heritage-Month.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -112,7 +112,7 @@ a:active     { color: #008000 }
 	Music Festival:</b></font></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -132,8 +132,8 @@ a:active     { color: #008000 }
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -162,7 +162,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
