--- a/ecpa2011/2011-bbq.html
+++ b/ecpa2011/2011-bbq.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -105,13 +105,13 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center">¡@</p>
+	<p align="center">ã€€</p>
 	<p align="center"><font size="4" color="#FFFF00"><b>Aug 6, 2011 Rundle Park 
 	BBQ<br>
-	</b></font><b><font size="4" color="#FFFF00">&nbsp; 2011 ¦~ 8 ¤é 6 ¤é ®L¤é¤½¶é¿N¯N·|&nbsp; </font><font size="5"> &nbsp;</font></b></p>
+	</b></font><b><font size="4" color="#FFFF00">&nbsp; 2011 å¹´ 8 æ—¥ 6 æ—¥ å¤æ—¥å…¬åœ’ç‡’çƒ¤æœƒ&nbsp; </font><font size="5"> &nbsp;</font></b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -125,19 +125,19 @@ a:active     { color: #008000 }
 <img border="0" src="bbq/P1020220.jpg" width="566" height="428"><br>
 <img border="0" src="bbq/P1020232.jpg" width="566" height="428"><br>
 <img border="0" src="bbq/P1020239.jpg" width="428" height="566"><br>
-<img border="0" src="bbq/P1020259.jpg" width="566" height="428"><img border="0" src="bbq/P1020264.jpg" width="566" height="488"><img border="0" src="bbq/P1020265.jpg" width="566" height="428"><img border="0" src="bbq/P1020266.jpg" width="566" height="428"><img border="0" src="bbq/P1020268.jpg" width="566" height="428"><img border="0" src="bbq/P1020269.jpg" width="566" height="428"><img border="0" src="bbq/P1020270.jpg" width="428" height="566"><img border="0" src="bbq/P1020271.jpg" width="566" height="428"><img border="0" src="bbq/P1020272.jpg" width="566" height="428"><img border="0" src="bbq/P1020274.jpg" width="566" height="428"><img border="0" src="bbq/P1020276.jpg" width="566" height="428"><img border="0" src="bbq/P1020284.jpg" width="566" height="428"><img border="0" src="bbq/P1020284a.jpg" width="428" height="566"><img border="0" src="bbq/P1020284b.jpg" width="428" height="566"><img border="0" src="bbq/P1020284c.jpg" width="428" height="566"><img border="0" src="bbq/P1020289.jpg" width="566" height="428"><img border="0" src="bbq/P1020297.jpg" width="566" height="408"><img border="0" src="bbq/P8060205.jpg" width="566" height="428"><img border="0" src="bbq/P8060206.jpg" width="566" height="428"><img border="0" src="bbq/P8060208.jpg" width="566" height="428"><img border="0" src="bbq/P8060209.jpg" width="566" height="428"><img border="0" src="bbq/P8060210.jpg" width="566" height="428"><img border="0" src="bbq/P8060211.jpg" width="566" height="428"><img border="0" src="bbq/P8060213.jpg" width="566" height="428"><p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p>¡@</p>
-<p><font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; ·R«°¥Á¼Ö¹Î¥D¿ì<br>
+<img border="0" src="bbq/P1020259.jpg" width="566" height="428"><img border="0" src="bbq/P1020264.jpg" width="566" height="488"><img border="0" src="bbq/P1020265.jpg" width="566" height="428"><img border="0" src="bbq/P1020266.jpg" width="566" height="428"><img border="0" src="bbq/P1020268.jpg" width="566" height="428"><img border="0" src="bbq/P1020269.jpg" width="566" height="428"><img border="0" src="bbq/P1020270.jpg" width="428" height="566"><img border="0" src="bbq/P1020271.jpg" width="566" height="428"><img border="0" src="bbq/P1020272.jpg" width="566" height="428"><img border="0" src="bbq/P1020274.jpg" width="566" height="428"><img border="0" src="bbq/P1020276.jpg" width="566" height="428"><img border="0" src="bbq/P1020284.jpg" width="566" height="428"><img border="0" src="bbq/P1020284a.jpg" width="428" height="566"><img border="0" src="bbq/P1020284b.jpg" width="428" height="566"><img border="0" src="bbq/P1020284c.jpg" width="428" height="566"><img border="0" src="bbq/P1020289.jpg" width="566" height="428"><img border="0" src="bbq/P1020297.jpg" width="566" height="408"><img border="0" src="bbq/P8060205.jpg" width="566" height="428"><img border="0" src="bbq/P8060206.jpg" width="566" height="428"><img border="0" src="bbq/P8060208.jpg" width="566" height="428"><img border="0" src="bbq/P8060209.jpg" width="566" height="428"><img border="0" src="bbq/P8060210.jpg" width="566" height="428"><img border="0" src="bbq/P8060211.jpg" width="566" height="428"><img border="0" src="bbq/P8060213.jpg" width="566" height="428"><p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p><font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦<br>
 </font>
 </td>
 
@@ -150,8 +150,8 @@ a:active     { color: #008000 }
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -180,7 +180,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
