--- a/ecpa2011/2011-cny-parish.html
+++ b/ecpa2011/2011-cny-parish.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -108,11 +108,11 @@ a:active     { color: #008000 }
 	<p align="center"><b><font color="#FFFF00"><br>
 	2011 Chinese New Year Performance<font size="2"> (Chinese Catholic Parish, 
 	Jan 29 &amp; 30, 2011)</font><br>
-	¨ß¦~¹A¾ú·s¦~¤Ñ¥D°óªíºt&nbsp;&nbsp;&nbsp; 2011 ¦~ 1 ¤é 29 ¤é&nbsp; ©M 30 ¤é</font><font size="4" color="#FFFF00">&nbsp;</font><font size="5"> </font>
+	å…”å¹´è¾²æ­·æ–°å¹´å¤©ä¸»å ‚è¡¨æ¼”&nbsp;&nbsp;&nbsp; 2011 å¹´ 1 æ—¥ 29 æ—¥&nbsp; å’Œ 30 æ—¥</font><font size="4" color="#FFFF00">&nbsp;</font><font size="5"> </font>
 	</b>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -163,8 +163,8 @@ Year, Year of the Rabbit, celebration,&nbsp; Jan. 29 and 30, 2011</font><img bor
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -193,7 +193,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
