--- a/ecpa2011/2011-cny-wem.html
+++ b/ecpa2011/2011-cny-wem.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -105,14 +105,14 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center">¡@</p>
+	<p align="center">ã€€</p>
 	<p align="center"><font size="4" color="#FFFF00"><b>2011 Chinese New Year 
 	Performance ( West Edmonton Mall, Jan 29, 2011 )<br>
-	¨ß¦~¹A¾ú·s¦~ªíºt</b></font><b><font size="4" color="#FFFF00">&nbsp; 2011 ¦~ 1 ¤é 29 ¤é&nbsp;</font><font size="5"> </font>
+	å…”å¹´è¾²æ­·æ–°å¹´è¡¨æ¼”</b></font><b><font size="4" color="#FFFF00">&nbsp; 2011 å¹´ 1 æ—¥ 29 æ—¥&nbsp;</font><font size="5"> </font>
 	</b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -146,8 +146,8 @@ Jan. 29, 2011</font><p><img border="0" src="cny/202F4A_1.jpg" width="566" height
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -176,7 +176,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
