--- a/ecpa2011/2011-concert-photos.html
+++ b/ecpa2011/2011-concert-photos.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -105,11 +105,11 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center"><b><font color="#FFFF00">·R«°¥Á¼Ö¹Î ¦¨¥ß¤Q©P¦~­µ¼Ö·| <br>
+	<p align="center"><b><font color="#FFFF00">æ„›åŸæ°‘æ¨‚åœ˜ æˆç«‹åå‘¨å¹´éŸ³æ¨‚æœƒ <br>
 	Edmonton Chinese Philharmonica 10th Anniversary Concert</font></b></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89">
-	¡@</td>
+	ã€€</td>
 
 </tr>
 
@@ -119,7 +119,7 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF"  align="left" width="620" bordercolor="#FFFFFF" valign="top">
 <br>
 <img border="0" src="concert/1.jpg" width="566" height="384"><img border="0" src="concert/2.jpg" width="566" height="384"><img border="0" src="concert/3.jpg" width="566" height="384"><img border="0" src="concert/4.jpg" width="566" height="384"><img border="0" src="concert/5.jpg" width="566" height="384"><img border="0" src="concert/6.jpg" width="566" height="384"><img border="0" src="concert/7.jpg" width="566" height="384"><img border="0" src="concert/8.jpg" width="566" height="380"><img border="0" src="concert/9.jpg" width="566" height="381"><img border="0" src="concert/10.jpg" width="566" height="384"><img border="0" src="concert/297206_183889145026181_174736785941417_395685_698594527_a.jpg" width="385" height="566"><img border="0" src="concert/302041_183889755026120_174736785941417_395696_753308264_n.jpg" width="384" height="566"><img border="0" src="concert/312567_183888745026221_174736785941417_395679_2101962533_n.jpg" width="566" height="384"><img border="0" src="concert/314373_183891271692635_174736785941417_395718_1895581845_n.jpg" width="566" height="384"><img border="0" src="concert/320254_183885868359842_174736785941417_395641_1089874116_n.jpg" width="566" height="384"><img border="0" src="concert/321192_183891425025953_174736785941417_395720_883087324_n.jpg" width="566" height="384"><img border="0" src="concert/376661_183891628359266_174736785941417_395722_202149641_n.jpg" width="566" height="384"><img border="0" src="concert/381307_183891498359279_174736785941417_395721_1845147297_n.jpg" width="566" height="384"><img border="0" src="concert/DSC_1540.jpg" width="566" height="380"><img border="0" src="concert/DSC_1560.jpg" width="380" height="566"><img border="0" src="concert/DSC_1579.jpg" width="566" height="380"><img border="0" src="concert/DSCF0407.jpg" width="566" height="381"><img border="0" src="concert/DSCF0410.jpg" width="566" height="381"><p>
-<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; ·R«°¥Á¼Ö¹Î¥D¿ì<br>
+<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada&nbsp; æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦<br>
 </font>
 </td>
 
@@ -132,8 +132,8 @@ a:active     { color: #008000 }
 
 </tr>
 </table>
-      <p>¡@</p>
-		<p>¡@</p>
+      <p>ã€€</p>
+		<p>ã€€</p>
       <p></p>
 <p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p>&nbsp;&nbsp;<p><br><br>
 
@@ -162,7 +162,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
