--- a/ecpa2015/20150620-Anniversary14.html
+++ b/ecpa2015/20150620-Anniversary14.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -161,8 +161,8 @@ a:active     { color: #008000 }
 
 
 <ul>
-  <li><a href="https://www.youtube.com/channel/UCns4vPa-qHg65lv-UTl8cQw" target="_blank">Endless Love ·s¤£¤F±¡</a><br></li>
-  <li><a href="https://plus.google.com/u/1/108052566567122507144/posts" target="_blank">Photo album ·Ó¤ù±M¿è</a></li>
+  <li><a href="https://www.youtube.com/channel/UCns4vPa-qHg65lv-UTl8cQw" target="_blank">Endless Love æ–°ä¸äº†æƒ…</a><br></li>
+  <li><a href="https://plus.google.com/u/1/108052566567122507144/posts" target="_blank">Photo album ç…§ç‰‡å°ˆè¼¯</a></li>
 </ul>
 
 </div>
@@ -224,7 +224,7 @@ a:active     { color: #008000 }
 <tr>
 <td>
 <p align="center">
-	<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada<br/> ·R«°¥Á¼Ö¹Î¥D¿ì
+	<font color="#000080">Presented by Edmonton Chinese Philharmonica Association, Canada<br/> æ„›åŸæ°‘æ¨‚åœ˜ä¸»è¾¦
 	</font>
 </p>
 </td>
@@ -263,7 +263,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
