--- a/ecpa2015/20150919-MidAutumn.html
+++ b/ecpa2015/20150919-MidAutumn.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -135,7 +135,7 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center"><strong><span class="style3">Mid-Autumn Festival Celebration entertainment at Churchill Square ¤¤¬î¸`¤á¥~ºt¥X (ªô¦Nº¸¼s³õ) - September 19, 2015</span><br class="style3"></strong></p>
+	<p align="center"><strong><span class="style3">Mid-Autumn Festival Celebration entertainment at Churchill Square ä¸­ç§‹ç¯€æˆ¶å¤–æ¼”å‡º (é‚±å‰çˆ¾å»£å ´) - September 19, 2015</span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -144,7 +144,7 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>Mid-Autumn Festival Celebration entertainment, organized by Edmonton Chinatown Multicultural Centre & Chinese Benevolent Association ¤¤¬î¸`¤á¥~ºt¥X
+	<strong>Mid-Autumn Festival Celebration entertainment, organized by Edmonton Chinatown Multicultural Centre & Chinese Benevolent Association ä¸­ç§‹ç¯€æˆ¶å¤–æ¼”å‡º
 	<br></strong><br>
 	<strong><br></strong><br>
 	</font>
@@ -206,7 +206,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
