--- a/ecpa2016/20160116-ChineseNewYear.html
+++ b/ecpa2016/20160116-ChineseNewYear.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -136,7 +136,7 @@ a:active     { color: #008000 }
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><strong><span class="style3">Performed at Chinese Catholic Parish Chinese School on Jan 16, 2016 for their Chinese New Year celebration.
- ¤G¹s¤@¤»¦~¤@¤ë¤Q¤»¤éµØ¤H¤Ñ¥D°ó¤¤¤å¾Ç®Õ¹A¾ä·s¦~¼y¯¬ªíºt</span><br class="style3"></strong></p>
+ äºŒé›¶ä¸€å…­å¹´ä¸€æœˆåå…­æ—¥è¯äººå¤©ä¸»å ‚ä¸­æ–‡å­¸æ ¡è¾²æ›†æ–°å¹´æ…¶ç¥è¡¨æ¼”</span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -146,7 +146,7 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>Performed at Chinese Catholic Parish Chinese School on Jan 16, 2016 for their Chinese New Year celebration. 
-¤G¹s¤@¤»¦~¤@¤ë¤Q¤»¤éµØ¤H¤Ñ¥D°ó¤¤¤å¾Ç®Õ¹A¾ä·s¦~¼y¯¬ªíºt
+äºŒé›¶ä¸€å…­å¹´ä¸€æœˆåå…­æ—¥è¯äººå¤©ä¸»å ‚ä¸­æ–‡å­¸æ ¡è¾²æ›†æ–°å¹´æ…¶ç¥è¡¨æ¼”
 	<br></strong><br>
 	<strong><br></strong><br>
 	</font>
@@ -212,7 +212,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
