--- a/ecpa2016/20160131-ChineseNewYear.html
+++ b/ecpa2016/20160131-ChineseNewYear.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -136,7 +136,7 @@ a:active     { color: #008000 }
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><strong><span class="style3">Performed at Chinese New Year Carnival, Chinese Catholic Parish, on Jan 30 & 31, 2016 
-¤G¹s¤@¤»¦~¤@¤ë¤T¤Q¤Î¤T¤Q¤@¤é«e©¹µØ¤H¤Ñ¥D°ó°Ñ»P·s¬K¹Å¦~µØºt¥X¡C</span><br class="style3"></strong></p>
+äºŒé›¶ä¸€å…­å¹´ä¸€æœˆä¸‰ååŠä¸‰åä¸€æ—¥å‰å¾€è¯äººå¤©ä¸»å ‚åƒèˆ‡æ–°æ˜¥å˜‰å¹´è¯æ¼”å‡ºã€‚</span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -145,7 +145,7 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>Performed at Chinese New Year Carnival, Chinese Catholic Parish, on Jan 30 & 31, 2016 ¤G¹s¤@¤»¦~¤@¤ë¤T¤Q¤Î¤T¤Q¤@¤é«e©¹µØ¤H¤Ñ¥D°ó°Ñ»P·s¬K¹Å¦~µØºt¥X¡C
+	<strong>Performed at Chinese New Year Carnival, Chinese Catholic Parish, on Jan 30 & 31, 2016 äºŒé›¶ä¸€å…­å¹´ä¸€æœˆä¸‰ååŠä¸‰åä¸€æ—¥å‰å¾€è¯äººå¤©ä¸»å ‚åƒèˆ‡æ–°æ˜¥å˜‰å¹´è¯æ¼”å‡ºã€‚
 	<br></strong><br>
 	<strong><br></strong><br>
 	</font>
@@ -211,7 +211,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
