--- a/ecpa2016/20160807-HeritageFestival.html
+++ b/ecpa2016/20160807-HeritageFestival.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -135,7 +135,7 @@ a:active     { color: #008000 }
       <table BORDER="1" bordercolor="#FF0000" align="left" CELLPADDING=2 COLS=2 bgcolor="#FFFFFF" bordercolor="#FF0000" height="564" style="border-collapse: collapse" >
 	<tr>
 	<td bgcolor="#FF0000" height="89">
-	<p align="center"><strong><span class="style3">Performed at Heritage Festival on Aug 7, 2016 ¤G¹s¤@¤»¦~¤K¤ë¤C¤é¥Á±Ú¸`ªíºt </span><br class="style3"></strong></p>
+	<p align="center"><strong><span class="style3">Performed at Heritage Festival on Aug 7, 2016 äºŒé›¶ä¸€å…­å¹´å…«æœˆä¸ƒæ—¥æ°‘æ—ç¯€è¡¨æ¼” </span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 
@@ -144,7 +144,7 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>Performed at Heritage Festival on Aug 7, 2016 ¤G¹s¤@¤»¦~¤K¤ë¤C¤é¥Á±Ú¸`ªíºt
+	<strong>Performed at Heritage Festival on Aug 7, 2016 äºŒé›¶ä¸€å…­å¹´å…«æœˆä¸ƒæ—¥æ°‘æ—ç¯€è¡¨æ¼”
 	<br></strong><br>
 	<strong><br></strong><br>
 	</font>
@@ -205,7 +205,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
