--- a/ecpa2017/20170709-Canada150.html
+++ b/ecpa2017/20170709-Canada150.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -144,15 +144,15 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>¤G¹s¤@¤C¦~¤C¤ë¤E¤é
-·Å¤h¤ñ¨È¤¤¤ß
-¥[®³¤j¤@¦Ê¤­¤Q¶g¦~¦h¤¸¤å¤Æ¤j¶×ºt
-ºt¥XºVÀ»¼Ö¦X«µ¡G¦Ñ¹«°ù¿Ë
+	<strong>äºŒé›¶ä¸€ä¸ƒå¹´ä¸ƒæœˆä¹æ—¥
+æº«å£«æ¯”äºä¸­å¿ƒ
+åŠ æ‹¿å¤§ä¸€ç™¾äº”åé€±å¹´å¤šå…ƒæ–‡åŒ–å¤§åŒ¯æ¼”
+æ¼”å‡ºæ•²æ“Šæ¨‚åˆå¥ï¼šè€é¼ å¨¶è¦ª
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
 	<font color="#000080">Performance video</font> <br><br>
-	<a target="_blank" href="https://youtu.be/mmv5eFeQHF4">The Rats¡¦ Wedding ¦Ñ¹«°ù¿Ë</a> <br><br>
+	<a target="_blank" href="https://youtu.be/mmv5eFeQHF4">The Ratsâ€™ Wedding è€é¼ å¨¶è¦ª</a> <br><br>
 </td>
 </tr>
 
@@ -211,7 +211,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
