--- a/ecpa2018/20180129.html
+++ b/ecpa2018/20180129.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -147,9 +147,9 @@ West End Christian Reform Church - January 29, 2018</span><br class="style3"></s
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-	¤G¹s¤@¤K¦~¤@¤ë¤Ü¤C¤é
-¥Á±Ú«Ç¤º¼Ö¥[®³¤j¨µºt
-¥[®³¤j¤¤°ê¥Á±Ú­µ¼Ö¨ó·|
+	äºŒé›¶ä¸€å…«å¹´ä¸€æœˆå»¿ä¸ƒæ—¥
+æ°‘æ—å®¤å…§æ¨‚åŠ æ‹¿å¤§å·¡æ¼”
+åŠ æ‹¿å¤§ä¸­åœ‹æ°‘æ—éŸ³æ¨‚å”æœƒ
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -208,7 +208,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
