--- a/ecpa2018/20180526.html
+++ b/ecpa2018/20180526.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -146,8 +146,8 @@ Chateau Lacombe - May 26, 2018</span><br class="style3"></strong></p>
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-¤G¹s¤@¤K¦~¤­¤ë¤Ü¤»¤é
-²Ä¤G©¡¥_¬ü¥jºå¤jÁÉ - ¹{¼ú¨åÂ§
+äºŒé›¶ä¸€å…«å¹´äº”æœˆå»¿å…­æ—¥
+ç¬¬äºŒå±†åŒ—ç¾å¤ç®å¤§è³½ - é ’çå…¸ç¦®
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -206,7 +206,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
