--- a/ecpa2018/20180908.html
+++ b/ecpa2018/20180908.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -146,9 +146,9 @@ Entertaining the residents - September 8, 2018</span><br class="style3"></strong
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-¤G¹s¤@¤K¦~¤E¤ë¤K¤é
-ÂI«°µØ°ğÅ@²z¤¤¤ß
-¬°°|¤Í´£¨Ñ®T¼Ö
+äºŒé›¶ä¸€å…«å¹´ä¹æœˆå…«æ—¥
+é»åŸè¯åŸ è­·ç†ä¸­å¿ƒ
+ç‚ºé™¢å‹æä¾›å¨›æ¨‚
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -212,7 +212,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
