--- a/ecpa2018/20180922.html
+++ b/ecpa2018/20180922.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -146,9 +146,9 @@ Entertaining the residents - September 22, 2018</span><br class="style3"></stron
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-╓G╧s╓@╓K╕~╓E╓К╓э╓G╓И
-╥R╔а╧y╝╤Ёр╙Ь╢ае@╡z╓╓╓ъ
-╛╟╟|╓м╢ё╗я╝T╪ж
+Д╨▄И⌡╤Д╦─Е┘╚Е╧╢Д╧²Ф°┬Е╩©Д╨▄Ф≈╔
+Ф└⌡Ф╟▒И═⌠Ф▄╞Е▀·И∙╥Ф°÷Х╜╥Г░├Д╦╜Е©┐
+Г┌╨И≥╒Е▐▀Ф▐░Д╬⌡Е╗⌡Ф╗┌
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -209,7 +209,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>║@</p>
+	<p>Ц──</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
