--- a/ecpa2018/20180930.html
+++ b/ecpa2018/20180930.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -136,7 +136,7 @@ a:active     { color: #008000 }
 	<tr>
 	<td bgcolor="#FF0000" height="89">
 	<p align="center"><strong><span class="style3">
-¡§Let it Glow¡¨ <br/>Southgate Mall - September 30, 2018</span><br class="style3"></strong></p>
+â€œLet it Glowâ€ <br/>Southgate Mall - September 30, 2018</span><br class="style3"></strong></p>
 	</td>
   	<td bgcolor="#FF0000" width="4" height="89"></td></tr>
 	
@@ -145,7 +145,7 @@ a:active     { color: #008000 }
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-	¤G¹s¤@¤K¦~¤E¤ë¤T¤Q¤é
+	äºŒé›¶ä¸€å…«å¹´ä¹æœˆä¸‰åæ—¥
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -206,7 +206,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>¡@</p>
+	<p>ã€€</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
