--- a/ecpa2021/20210131.html
+++ b/ecpa2021/20210131.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -150,13 +150,13 @@ a:active     { color: #008000 }
 
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
-	<strong>¤G¹s¤G¤@¦~¤@¤ë¡Aµø¹³ºt«µ¶P¤û¦~</strong><br>
+	<strong>äºŒé›¶äºŒä¸€å¹´ä¸€æœˆï¼Œè¦–åƒæ¼”å¥è³€ç‰›å¹´</strong><br>
 	<strong><br></strong>
 	</font>
 	<font color="#000080">Performance video</font> <br><br>
-	<a target="_blank" href="https://www.youtube.com/watch?v=S3nSIMGrKUU">Happy Lunar New Year ¼y¶P·s¦~</a> <br><br>
-	<a target="_blank" href="https://www.youtube.com/watch?v=FrISGphgCuM">Full of Joy ³ß¬v¬v</a> <br><br>
-	<a target="_blank" href="https://www.youtube.com/watch?v=U_u8ZoEk9Nk">Rising Spirit ¨B¨B°ª</a> <br><br>
+	<a target="_blank" href="https://www.youtube.com/watch?v=S3nSIMGrKUU">Happy Lunar New Year æ…¶è³€æ–°å¹´</a> <br><br>
+	<a target="_blank" href="https://www.youtube.com/watch?v=FrISGphgCuM">Full of Joy å–œæ´‹æ´‹</a> <br><br>
+	<a target="_blank" href="https://www.youtube.com/watch?v=U_u8ZoEk9Nk">Rising Spirit æ­¥æ­¥é«˜</a> <br><br>
 </td>
 </tr>
 
