--- a/ecpa2022/20220801.html
+++ b/ecpa2022/20220801.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -146,7 +146,7 @@ Heritage Festival at Hawrelak Park  - August 1, 2022</span><br class="style3"></
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-¤G¹s¤G¤G¦~¤K¤ë¤@¤é   ¥Á±Ú¸`¼y¯¬   ¬°¤¤°êÀ]¤Î¥xÆWÀ]ºt«µ
+äºŒé›¶äºŒäºŒå¹´å…«æœˆä¸€æ—¥   æ°‘æ—ç¯€æ…¶ç¥   ç‚ºä¸­åœ‹é¤¨åŠå°ç£é¤¨æ¼”å¥
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -216,7 +216,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>ï¿½@</p>
+	<p>åš™ç‘¾</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
