--- a/ecpa2022/20220910.html
+++ b/ecpa2022/20220910.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Edmonton Chinese Philharmonica Association" />
 <meta http-equiv="imagetoolbar" content="no">
 <title>ECPA Edmonton Chinese Philharmonica - Chinese Traditional Orchestra</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style>
 <!--
@@ -146,7 +146,7 @@ City Farmer's Market  - September 10, 2022</span><br class="style3"></strong></p
 <td bgcolor="#FFFFFF" width="620" bordercolor="#FFFFFF" valign="top">
 <div class="style4"><font color="#000080">
 	<strong>
-¤G¹s¤G¤G¦~¤E¤ë¤Q¤é   ¤¤¬î¸`¼y¯¬   «°¥«¹A¤Ò¥«¶°ºt«µ
+äºŒé›¶äºŒäºŒå¹´ä¹æœˆåæ—¥   ä¸­ç§‹ç¯€æ…¶ç¥   åŸå¸‚è¾²å¤«å¸‚é›†æ¼”å¥
 	<br></strong><br>
 	<strong><br></strong>
 	</font>
@@ -217,7 +217,7 @@ ecpa2001@hotmail.com</a></font>
 				</td>
 			</tr>
 		</table>
-	<p>ï¿½@</p>
+	<p>åš™ç‘¾</p>
 	</td>
     <!-- <td width="30"><img src="../images/layout/spacer.gif" width="30" height="8"></td> -->
   </tr>
