--- a/guzheng/index.html
+++ b/guzheng/index.html
@@ -5,7 +5,7 @@
    <meta name="ProgId" content="FrontPage.Editor.Document">
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta http-equiv="Content-Language" content="en-us">
-   	<meta http-equiv="Content-Type" content="text/html; charset=big5">
+   	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="description" content="Ruby Tin GuZheng teaching, 
 			promote chinese music culture, educating the your people.  
 			Organize events for the Chinese Community,
@@ -36,7 +36,7 @@
     <td width="100%" height="2" bgcolor="blue">&nbsp;&nbsp;</td>
   </tr>
   <tr>
-    <td width="100%" align="right" bgcolor="#000000">¡@</td>
+    <td width="100%" align="right" bgcolor="#000000">ã€€</td>
   </tr>
   
 </table>
@@ -107,11 +107,11 @@ Chinese Philharmonica Association&nbsp;&nbsp;
   <tr>
     <td width="62%"><b><a href="http://www.runonnet.com/tas/htm_paint/rt_1.htm">
 	Ruby Tin's Chinese paintings</a></b></td>
-    <td width="38%">¡@</td>
+    <td width="38%">ã€€</td>
   </tr>
   <tr>
     <td width="62%"><b><a href="common.html">Interesting links</a></b></td>
-    <td width="38%">¡@</td>
+    <td width="38%">ã€€</td>
   </tr>
 </table>
 <hr WIDTH="100%">
